commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.bindingtype.yml
+++ b/docs/docs-ref-autogen/excel/excel.bindingtype.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: de3c58ec33d8fa1421b8f8a657ac080c10e09ae2
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042399"
 items:
 - uid: excel.Excel.BindingType
-  summary: '<span data-ttu-id="2b93c-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2b93c-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="ef280-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ef280-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.BindingType
   fullName: excel.Excel.BindingType
   langs:
