--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangeformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 62247d75576f063a18c2bf8ab8caf64e2bbec51b
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042271"
 items:
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData
-  summary: <span data-ttu-id="3ef36-101">更新数据的 RangeFormat 对象，在"rangeFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="3ef36-101">An interface for updating data on the RangeFormat object, for use in "rangeFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="e85e4-101">更新数据的 RangeFormat 对象，在"rangeFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="e85e4-101">An interface for updating data on the RangeFormat object, for use in "rangeFormat.set({ ... })".</span></span>
   name: Excel.Interfaces.RangeFormatUpdateData
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData
   langs:
@@ -28,10 +28,10 @@ items:
   - excel.Excel.Interfaces.RangeFormatUpdateData.wrapText
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.columnWidth
   summary: >-
-    <span data-ttu-id="3ef36-p101">获取或设置区域内的所有列的宽度。如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="3ef36-p101">Gets or sets the width of all colums within the range. If the column widths are not uniform, null will be returned.</span></span>
+    <span data-ttu-id="e85e4-p101">获取或设置区域内的所有列的宽度。如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="e85e4-p101">Gets or sets the width of all colums within the range. If the column widths are not uniform, null will be returned.</span></span>
 
 
-    <span data-ttu-id="3ef36-104">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-104">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-104">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-104">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: columnWidth
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.columnWidth
   langs:
@@ -44,10 +44,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.fill
   summary: >-
-    <span data-ttu-id="3ef36-105">返回的总体范围上定义的填充对象。</span><span class="sxs-lookup"><span data-stu-id="3ef36-105">Returns the fill object defined on the overall range.</span></span>
+    <span data-ttu-id="e85e4-105">返回的总体范围上定义的填充对象。</span><span class="sxs-lookup"><span data-stu-id="e85e4-105">Returns the fill object defined on the overall range.</span></span>
 
 
-    <span data-ttu-id="3ef36-106">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-106">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-106">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-106">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: fill
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.fill
   langs:
@@ -60,10 +60,10 @@ items:
       - excel.Excel.Interfaces.RangeFillUpdateData
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.font
   summary: >-
-    <span data-ttu-id="3ef36-107">返回的总体范围上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="3ef36-107">Returns the font object defined on the overall range.</span></span>
+    <span data-ttu-id="e85e4-107">返回的总体范围上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="e85e4-107">Returns the font object defined on the overall range.</span></span>
 
 
-    <span data-ttu-id="3ef36-108">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-108">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-108">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-108">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: font
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.font
   langs:
@@ -76,10 +76,10 @@ items:
       - excel.Excel.Interfaces.RangeFontUpdateData
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.horizontalAlignment
   summary: >-
-    <span data-ttu-id="3ef36-109">代表指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="3ef36-109">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="3ef36-110">有关详细信息，请参阅 Excel.HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="3ef36-110">See Excel.HorizontalAlignment for details.</span></span>
+    <span data-ttu-id="e85e4-109">代表指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="e85e4-109">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="e85e4-110">有关详细信息，请参阅 Excel.HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="e85e4-110">See Excel.HorizontalAlignment for details.</span></span>
 
 
-    <span data-ttu-id="3ef36-111">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-111">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-111">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-111">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: horizontalAlignment
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.horizontalAlignment
   langs:
@@ -92,10 +92,10 @@ items:
       - Excel.HorizontalAlignment | "General" | "Left" | "Center" | "Right" | "Fill" | "Justify" | "CenterAcrossSelection" | "Distributed"
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.protection
   summary: >-
-    <span data-ttu-id="3ef36-112">返回范围的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="3ef36-112">Returns the format protection object for a range.</span></span>
+    <span data-ttu-id="e85e4-112">返回范围的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="e85e4-112">Returns the format protection object for a range.</span></span>
 
 
-    <span data-ttu-id="3ef36-113">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-113">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-113">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-113">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: protection
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.protection
   langs:
@@ -108,10 +108,10 @@ items:
       - excel.Excel.Interfaces.FormatProtectionUpdateData
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.rowHeight
   summary: >-
-    <span data-ttu-id="3ef36-114">获取或设置范围中的所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="3ef36-114">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="3ef36-115">如果行高不是统一的则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="3ef36-115">If the row heights are not uniform, null will be returned.</span></span>
+    <span data-ttu-id="e85e4-114">获取或设置范围中的所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="e85e4-114">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="e85e4-115">如果行高不是统一的则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="e85e4-115">If the row heights are not uniform, null will be returned.</span></span>
 
 
-    <span data-ttu-id="3ef36-116">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-116">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-116">\[[API 集： ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-116">\[ [API set: ExcelApi 1.2](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: rowHeight
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.rowHeight
   langs:
@@ -124,10 +124,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.textOrientation
   summary: >-
-    <span data-ttu-id="3ef36-117">获取或设置范围内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="3ef36-117">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="3ef36-118">文本方向应为整数从-90 至 90 或 180 纵向文本。</span><span class="sxs-lookup"><span data-stu-id="3ef36-118">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="3ef36-119">如果不统一范围内的方向，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="3ef36-119">If the orientation within a range are not uniform, then null will be returned.</span></span>
+    <span data-ttu-id="e85e4-117">获取或设置范围内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="e85e4-117">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="e85e4-118">文本方向应为整数从-90 至 90 或 180 纵向文本。</span><span class="sxs-lookup"><span data-stu-id="e85e4-118">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="e85e4-119">如果不统一范围内的方向，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="e85e4-119">If the orientation within a range are not uniform, then null will be returned.</span></span>
 
 
-    <span data-ttu-id="3ef36-120">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-120">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-120">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-120">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: textOrientation
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.textOrientation
   langs:
@@ -140,10 +140,10 @@ items:
       - number
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.useStandardHeight
   summary: >-
-    <span data-ttu-id="3ef36-121">确定 Range 对象的行高是否等于工作表的标准高度。</span><span class="sxs-lookup"><span data-stu-id="3ef36-121">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="3ef36-122">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="3ef36-122">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="3ef36-123">如果区域包含多个行，并且不是行的高度相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="3ef36-123">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="3ef36-124">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="3ef36-124">Returns False otherwise.</span></span>
+    <span data-ttu-id="e85e4-121">确定 Range 对象的行高是否等于工作表的标准高度。</span><span class="sxs-lookup"><span data-stu-id="e85e4-121">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="e85e4-122">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="e85e4-122">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="e85e4-123">如果区域包含多个行，并且不是行的高度相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="e85e4-123">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="e85e4-124">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="e85e4-124">Returns False otherwise.</span></span>
 
 
-    <span data-ttu-id="3ef36-125">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-125">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-125">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-125">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: useStandardHeight
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.useStandardHeight
   langs:
@@ -156,10 +156,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.useStandardWidth
   summary: >-
-    <span data-ttu-id="3ef36-126">指示是否 Range 对象的列宽等于的工作表的标准列宽。</span><span class="sxs-lookup"><span data-stu-id="3ef36-126">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="3ef36-127">如果 Range 对象的列宽等于的工作表的标准列宽，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="3ef36-127">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="3ef36-128">如果该区域包含多个列并且列不是高度相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="3ef36-128">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="3ef36-129">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="3ef36-129">Returns False otherwise.</span></span>
+    <span data-ttu-id="e85e4-126">指示是否 Range 对象的列宽等于的工作表的标准列宽。</span><span class="sxs-lookup"><span data-stu-id="e85e4-126">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="e85e4-127">如果 Range 对象的列宽等于的工作表的标准列宽，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="e85e4-127">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="e85e4-128">如果该区域包含多个列并且列不是高度相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="e85e4-128">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="e85e4-129">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="e85e4-129">Returns False otherwise.</span></span>
 
 
-    <span data-ttu-id="3ef36-130">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-130">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-130">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-130">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: useStandardWidth
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.useStandardWidth
   langs:
@@ -172,10 +172,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.verticalAlignment
   summary: >-
-    <span data-ttu-id="3ef36-131">代表指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="3ef36-131">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="3ef36-132">有关详细信息，请参阅 Excel.VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="3ef36-132">See Excel.VerticalAlignment for details.</span></span>
+    <span data-ttu-id="e85e4-131">代表指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="e85e4-131">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="e85e4-132">有关详细信息，请参阅 Excel.VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="e85e4-132">See Excel.VerticalAlignment for details.</span></span>
 
 
-    <span data-ttu-id="3ef36-133">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-133">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-133">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-133">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: verticalAlignment
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.verticalAlignment
   langs:
@@ -188,10 +188,10 @@ items:
       - Excel.VerticalAlignment | "Top" | "Center" | "Bottom" | "Justify" | "Distributed"
 - uid: excel.Excel.Interfaces.RangeFormatUpdateData.wrapText
   summary: >-
-    <span data-ttu-id="3ef36-p108">指示 Excel 是否将对象中的文本换行。指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="3ef36-p108">Indicates if Excel wraps the text in the object. A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
+    <span data-ttu-id="e85e4-p108">指示 Excel 是否将对象中的文本换行。指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="e85e4-p108">Indicates if Excel wraps the text in the object. A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
 
 
-    <span data-ttu-id="3ef36-136">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3ef36-136">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e85e4-136">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e85e4-136">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: wrapText
   fullName: excel.Excel.Interfaces.RangeFormatUpdateData.wrapText
   langs:
