--- a/docs/docs-ref-autogen/excel/excel.tablerow.yml
+++ b/docs/docs-ref-autogen/excel/excel.tablerow.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 6334a8faa8272bdce78a343404e36d9ded5dd3bd
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042419"
 items:
 - uid: excel.Excel.TableRow
   summary: >-
-    <span data-ttu-id="86cf3-101">表示表中的行。</span><span class="sxs-lookup"><span data-stu-id="86cf3-101">Represents a row in a table.</span></span>
+    <span data-ttu-id="090f2-101">表示表中的行。</span><span class="sxs-lookup"><span data-stu-id="090f2-101">Represents a row in a table.</span></span>
 
 
-    <span data-ttu-id="86cf3-102">请注意，与不同区域或列，如果在其之前添加新行/列将调整，TableRow 对象表示的表格行中，但不是数据的物理位置。</span><span class="sxs-lookup"><span data-stu-id="86cf3-102">Note that unlike Ranges or Columns, which will adjust if new rows/columns are added before them, a TableRow object represent the physical location of the table row, but not the data.</span></span> <span data-ttu-id="86cf3-103">也就是说，如果对数据进行排序，或者添加新行，将继续表格行指向创建它的索引处。</span><span class="sxs-lookup"><span data-stu-id="86cf3-103">That is, if the data is sorted or if new rows are added, a table row will continue to point at the index for which it was created.</span></span>
+    <span data-ttu-id="090f2-102">请注意，与不同区域或列，如果在其之前添加新行/列将调整，TableRow 对象表示的表格行中，但不是数据的物理位置。</span><span class="sxs-lookup"><span data-stu-id="090f2-102">Note that unlike Ranges or Columns, which will adjust if new rows/columns are added before them, a TableRow object represent the physical location of the table row, but not the data.</span></span> <span data-ttu-id="090f2-103">也就是说，如果对数据进行排序，或者添加新行，将继续表格行指向创建它的索引处。</span><span class="sxs-lookup"><span data-stu-id="090f2-103">That is, if the data is sorted or if new rows are added, a table row will continue to point at the index for which it was created.</span></span>
 
 
-    <span data-ttu-id="86cf3-104">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86cf3-104">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="090f2-104">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="090f2-104">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.TableRow
   fullName: excel.Excel.TableRow
   langs:
@@ -32,10 +32,10 @@ items:
   - excel.Excel.TableRow.values
 - uid: excel.Excel.TableRow.delete
   summary: >-
-    <span data-ttu-id="86cf3-105">从表中删除行。</span><span class="sxs-lookup"><span data-stu-id="86cf3-105">Deletes the row from the table.</span></span>
+    <span data-ttu-id="090f2-105">从表中删除行。</span><span class="sxs-lookup"><span data-stu-id="090f2-105">Deletes the row from the table.</span></span>
 
 
-    <span data-ttu-id="86cf3-106">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86cf3-106">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="090f2-106">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="090f2-106">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: delete()
   fullName: excel.Excel.TableRow.delete
   langs:
@@ -46,13 +46,13 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"86cf3-107\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-107\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(2);\n    row.delete();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"090f2-107\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-107\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(2);\n    row.delete();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.TableRow.getRange
   summary: >-
-    <span data-ttu-id="86cf3-108">返回与整个行相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="86cf3-108">Returns the range object associated with the entire row.</span></span>
+    <span data-ttu-id="090f2-108">返回与整个行相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="090f2-108">Returns the range object associated with the entire row.</span></span>
 
 
-    <span data-ttu-id="86cf3-109">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86cf3-109">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="090f2-109">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="090f2-109">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getRange()
   fullName: excel.Excel.TableRow.getRange
   langs:
@@ -63,13 +63,13 @@ items:
     return:
       type:
       - excel.Excel.Range
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"86cf3-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-110\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(0);\n    var rowRange = row.getRange();\n    rowRange.load('address');\n    return ctx.sync().then(function() {\n        console.log(rowRange.address);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"090f2-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-110\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(0);\n    var rowRange = row.getRange();\n    rowRange.load('address');\n    return ctx.sync().then(function() {\n        console.log(rowRange.address);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.TableRow.index
   summary: >-
-    <span data-ttu-id="86cf3-p102">返回表的行集合内行的索引编号。从零开始编制索引。只读。</span><span class="sxs-lookup"><span data-stu-id="86cf3-p102">Returns the index number of the row within the rows collection of the table. Zero-indexed. Read-only.</span></span>
+    <span data-ttu-id="090f2-p102">返回表的行集合内行的索引编号。从零开始编制索引。只读。</span><span class="sxs-lookup"><span data-stu-id="090f2-p102">Returns the index number of the row within the rows collection of the table. Zero-indexed. Read-only.</span></span>
 
 
-    <span data-ttu-id="86cf3-114">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86cf3-114">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="090f2-114">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="090f2-114">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: index
   fullName: excel.Excel.TableRow.index
   langs:
@@ -81,8 +81,8 @@ items:
       type:
       - number
 - uid: excel.Excel.TableRow.load
-  summary: <span data-ttu-id="86cf3-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="86cf3-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="86cf3-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="86cf3-116">You must call "context.sync()" before reading the properties.</span></span>
-  remarks: "<span data-ttu-id=\"86cf3-117\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-117\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"86cf3-118\">`load(option?: { select?: string; expand?: string; }): Excel.TableRow`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-118\">`load(option?: { select?: string; expand?: string; }): Excel.TableRow` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"86cf3-119\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableRow`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-119\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableRow` - Only available on collection types.</span></span> <span data-ttu-id=\"86cf3-120\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-120\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"86cf3-121\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-121\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"86cf3-122\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-122\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"86cf3-123\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-123\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"86cf3-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"86cf3-124\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItem(0);\n    row.load('index');\n    return ctx.sync().then(function() {\n        console.log(row.index);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\nExcel.run(function (ctx) { \n    var tables = ctx.workbook.tables;\n    var newValues = [[\"New\", \"Values\", \"For\", \"New\", \"Row\"]];\n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(2);\n    row.values = newValues;\n    row.load('values');\n    return ctx.sync().then(function() {\n        console.log(row.values);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  summary: <span data-ttu-id="090f2-115">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="090f2-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="090f2-116">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="090f2-116">You must call "context.sync()" before reading the properties.</span></span>
+  remarks: "<span data-ttu-id=\"090f2-117\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-117\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"090f2-118\">`load(option?: { select?: string; expand?: string; }): Excel.TableRow`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-118\">`load(option?: { select?: string; expand?: string; }): Excel.TableRow` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"090f2-119\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableRow`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-119\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableRow` - Only available on collection types.</span></span> <span data-ttu-id=\"090f2-120\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-120\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"090f2-121\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-121\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"090f2-122\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-122\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"090f2-123\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-123\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"090f2-124\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"090f2-124\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItem(0);\n    row.load('index');\n    return ctx.sync().then(function() {\n        console.log(row.index);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\nExcel.run(function (ctx) { \n    var tables = ctx.workbook.tables;\n    var newValues = [[\"New\", \"Values\", \"For\", \"New\", \"Row\"]];\n    var tableName = 'Table1';\n    var row = ctx.workbook.tables.getItem(tableName).rows.getItemAt(2);\n    row.values = newValues;\n    row.load('values');\n    return ctx.sync().then(function() {\n        console.log(row.values);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   name: load(option)
   fullName: excel.Excel.TableRow.load
   langs:
@@ -96,7 +96,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="86cf3-125">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="86cf3-125">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="090f2-125">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="090f2-125">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.TableRow.toJSON
@@ -113,10 +113,10 @@ items:
       description: ''
 - uid: excel.Excel.TableRow.values
   summary: >-
-    <span data-ttu-id="86cf3-126">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="86cf3-126">Represents the raw values of the specified range.</span></span> <span data-ttu-id="86cf3-127">返回的数据可能的字符串类型、 号码或一个布尔值。</span><span class="sxs-lookup"><span data-stu-id="86cf3-127">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="86cf3-128">包含错误的单元格将返回的错误字符串。</span><span class="sxs-lookup"><span data-stu-id="86cf3-128">Cells that contain an error will return the error string.</span></span>
+    <span data-ttu-id="090f2-126">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="090f2-126">Represents the raw values of the specified range.</span></span> <span data-ttu-id="090f2-127">返回的数据可能的字符串类型、 号码或一个布尔值。</span><span class="sxs-lookup"><span data-stu-id="090f2-127">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="090f2-128">包含错误的单元格将返回的错误字符串。</span><span class="sxs-lookup"><span data-stu-id="090f2-128">Cells that contain an error will return the error string.</span></span>
 
 
-    <span data-ttu-id="86cf3-129">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86cf3-129">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="090f2-129">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="090f2-129">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: values
   fullName: excel.Excel.TableRow.values
   langs:
