--- a/docs/docs-ref-autogen/office/officeextension.updateoptions.yml
+++ b/docs/docs-ref-autogen/office/officeextension.updateoptions.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: c2a4f1b3e88bb10e272898707a29e966ae163476
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042286"
 items:
 - uid: office.OfficeExtension.UpdateOptions
-  summary: <span data-ttu-id="ebb91-101">提供一个选项以隐藏错误时用于设置多个属性的对象会尝试设置只读属性。</span><span class="sxs-lookup"><span data-stu-id="ebb91-101">Provides an option for suppressing an error when the object that is used to set multiple properties tries to set read-only properties.</span></span>
+  summary: <span data-ttu-id="31433-101">提供一个选项以隐藏错误时用于设置多个属性的对象会尝试设置只读属性。</span><span class="sxs-lookup"><span data-stu-id="31433-101">Provides an option for suppressing an error when the object that is used to set multiple properties tries to set read-only properties.</span></span>
   name: OfficeExtension.UpdateOptions
   fullName: office.OfficeExtension.UpdateOptions
   langs:
@@ -17,7 +17,7 @@ items:
   children:
   - office.OfficeExtension.UpdateOptions.throwOnReadOnly
 - uid: office.OfficeExtension.UpdateOptions.throwOnReadOnly
-  summary: <span data-ttu-id="ebb91-102">如果传入的属性列表中包含只读属性将引发错误 (默认值 = true)。</span><span class="sxs-lookup"><span data-stu-id="ebb91-102">Throw an error if the passed-in property list includes read-only properties (default = true).</span></span>
+  summary: <span data-ttu-id="31433-102">如果传入的属性列表中包含只读属性将引发错误 (默认值 = true)。</span><span class="sxs-lookup"><span data-stu-id="31433-102">Throw an error if the passed-in property list includes read-only properties (default = true).</span></span>
   name: throwOnReadOnly
   fullName: office.OfficeExtension.UpdateOptions.throwOnReadOnly
   langs:
