--- a/docs/docs-ref-autogen/onenote/onenote.imageocrdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.imageocrdata.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: b2f520ce84d9c560648e97365387b3c3f367672b
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042360"
 items:
 - uid: onenote.OneNote.ImageOcrData
   summary: >-
-    <span data-ttu-id="e8f80-101">代表由 OCR （光学字符识别） 图像的获得的数据。</span><span class="sxs-lookup"><span data-stu-id="e8f80-101">Represents data obtained by OCR (optical character recognition) of an image.</span></span>
+    <span data-ttu-id="dc7e0-101">代表由 OCR （光学字符识别） 图像的获得的数据。</span><span class="sxs-lookup"><span data-stu-id="dc7e0-101">Represents data obtained by OCR (optical character recognition) of an image.</span></span>
 
 
-    <span data-ttu-id="e8f80-102">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e8f80-102">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="dc7e0-102">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc7e0-102">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: OneNote.ImageOcrData
   fullName: onenote.OneNote.ImageOcrData
   langs:
@@ -23,10 +23,10 @@ items:
   - onenote.OneNote.ImageOcrData.ocrText
 - uid: onenote.OneNote.ImageOcrData.ocrLanguageId
   summary: >-
-    <span data-ttu-id="e8f80-103">表示带有类似于 EN-US 值的 OCR 语言</span><span class="sxs-lookup"><span data-stu-id="e8f80-103">Represents the OCR language, with values such as EN-US</span></span>
+    <span data-ttu-id="dc7e0-103">表示带有类似于 EN-US 值的 OCR 语言</span><span class="sxs-lookup"><span data-stu-id="dc7e0-103">Represents the OCR language, with values such as EN-US</span></span>
 
 
-    <span data-ttu-id="e8f80-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e8f80-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="dc7e0-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc7e0-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: ocrLanguageId
   fullName: onenote.OneNote.ImageOcrData.ocrLanguageId
   langs:
@@ -39,10 +39,10 @@ items:
       - string
 - uid: onenote.OneNote.ImageOcrData.ocrText
   summary: >-
-    <span data-ttu-id="e8f80-105">表示由图像 OCR 获取的文本</span><span class="sxs-lookup"><span data-stu-id="e8f80-105">Represents the text obtained by OCR of the image</span></span>
+    <span data-ttu-id="dc7e0-105">表示由图像 OCR 获取的文本</span><span class="sxs-lookup"><span data-stu-id="dc7e0-105">Represents the text obtained by OCR of the image</span></span>
 
 
-    <span data-ttu-id="e8f80-106">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e8f80-106">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="dc7e0-106">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc7e0-106">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: ocrText
   fullName: onenote.OneNote.ImageOcrData.ocrText
   langs:
