--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.inkanalysisupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.inkanalysisupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 0bec79e9f19ac474041d3711ac34c6769b3a7fcf
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042363"
 items:
 - uid: onenote.OneNote.Interfaces.InkAnalysisUpdateData
-  summary: <span data-ttu-id="3e26a-101">更新数据的 InkAnalysis 对象，在"inkAnalysis.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="3e26a-101">An interface for updating data on the InkAnalysis object, for use in "inkAnalysis.set({ ... })".</span></span>
+  summary: <span data-ttu-id="e5745-101">更新数据的 InkAnalysis 对象，在"inkAnalysis.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="e5745-101">An interface for updating data on the InkAnalysis object, for use in "inkAnalysis.set({ ... })".</span></span>
   name: OneNote.Interfaces.InkAnalysisUpdateData
   fullName: onenote.OneNote.Interfaces.InkAnalysisUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.InkAnalysisUpdateData.page
 - uid: onenote.OneNote.Interfaces.InkAnalysisUpdateData.page
   summary: >-
-    <span data-ttu-id="3e26a-102">获取父页对象。</span><span class="sxs-lookup"><span data-stu-id="3e26a-102">Gets the parent page object.</span></span>
+    <span data-ttu-id="e5745-102">获取父页对象。</span><span class="sxs-lookup"><span data-stu-id="e5745-102">Gets the parent page object.</span></span>
 
 
-    <span data-ttu-id="3e26a-103">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e26a-103">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e5745-103">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5745-103">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: page
   fullName: onenote.OneNote.Interfaces.InkAnalysisUpdateData.page
   langs:
