--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.inkworddata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.inkworddata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 38742a8a9c38de2e42fff997feab5e00c49b7593
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042367"
 items:
 - uid: onenote.OneNote.Interfaces.InkWordData
-  summary: <span data-ttu-id="358a5-101">描述调用"inkWord.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="358a5-101">An interface describing the data returned by calling "inkWord.toJSON()".</span></span>
+  summary: <span data-ttu-id="54998-101">描述调用"inkWord.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="54998-101">An interface describing the data returned by calling "inkWord.toJSON()".</span></span>
   name: OneNote.Interfaces.InkWordData
   fullName: onenote.OneNote.Interfaces.InkWordData
   langs:
@@ -21,10 +21,10 @@ items:
   - onenote.OneNote.Interfaces.InkWordData.wordAlternates
 - uid: onenote.OneNote.Interfaces.InkWordData.id
   summary: >-
-    <span data-ttu-id="358a5-p101">获取 InkWord 对象的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="358a5-p101">Gets the ID of the InkWord object. Read-only.</span></span>
+    <span data-ttu-id="54998-p101">获取 InkWord 对象的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="54998-p101">Gets the ID of the InkWord object. Read-only.</span></span>
 
 
-    <span data-ttu-id="358a5-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="358a5-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="54998-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="54998-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: id
   fullName: onenote.OneNote.Interfaces.InkWordData.id
   langs:
@@ -37,10 +37,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.InkWordData.languageId
   summary: >-
-    <span data-ttu-id="358a5-p102">该墨迹字词中已识别语言的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="358a5-p102">The id of the recognized language in this ink word. Read-only.</span></span>
+    <span data-ttu-id="54998-p102">该墨迹字词中已识别语言的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="54998-p102">The id of the recognized language in this ink word. Read-only.</span></span>
 
 
-    <span data-ttu-id="358a5-107">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="358a5-107">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="54998-107">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="54998-107">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: languageId
   fullName: onenote.OneNote.Interfaces.InkWordData.languageId
   langs:
@@ -53,10 +53,10 @@ items:
       - string
 - uid: onenote.OneNote.Interfaces.InkWordData.paragraph
   summary: >-
-    <span data-ttu-id="358a5-p103">包含墨迹字词的父段落。只读。</span><span class="sxs-lookup"><span data-stu-id="358a5-p103">The parent paragraph containing the ink word. Read-only.</span></span>
+    <span data-ttu-id="54998-p103">包含墨迹字词的父段落。只读。</span><span class="sxs-lookup"><span data-stu-id="54998-p103">The parent paragraph containing the ink word. Read-only.</span></span>
 
 
-    <span data-ttu-id="358a5-110">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="358a5-110">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="54998-110">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="54998-110">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: paragraph
   fullName: onenote.OneNote.Interfaces.InkWordData.paragraph
   langs:
@@ -69,10 +69,10 @@ items:
       - onenote.OneNote.Interfaces.ParagraphData
 - uid: onenote.OneNote.Interfaces.InkWordData.wordAlternates
   summary: >-
-    <span data-ttu-id="358a5-p104">按照可能性的顺序，已在此墨迹字词中识别的字词。只读。</span><span class="sxs-lookup"><span data-stu-id="358a5-p104">The words that were recognized in this ink word, in order of likelihood. Read-only.</span></span>
+    <span data-ttu-id="54998-p104">按照可能性的顺序，已在此墨迹字词中识别的字词。只读。</span><span class="sxs-lookup"><span data-stu-id="54998-p104">The words that were recognized in this ink word, in order of likelihood. Read-only.</span></span>
 
 
-    <span data-ttu-id="358a5-113">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="358a5-113">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="54998-113">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="54998-113">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: wordAlternates
   fullName: onenote.OneNote.Interfaces.InkWordData.wordAlternates
   langs:
