--- a/docs/docs-ref-autogen/excel/excel.chartaxistimeunit.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartaxistimeunit.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 62305c7db73a506db6baf69d992ecfcbb7a677a0
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042445"
 items:
 - uid: excel.Excel.ChartAxisTimeUnit
   summary: >-
-    <span data-ttu-id="45d13-101">指定图表轴和数据系列的时间单位。</span><span class="sxs-lookup"><span data-stu-id="45d13-101">Specifies the unit of time for chart axes and data series.</span></span>
+    <span data-ttu-id="4c8f5-101">指定图表轴和数据系列的时间单位。</span><span class="sxs-lookup"><span data-stu-id="4c8f5-101">Specifies the unit of time for chart axes and data series.</span></span>
 
 
-    <span data-ttu-id="45d13-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="45d13-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4c8f5-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c8f5-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ChartAxisTimeUnit
   fullName: excel.Excel.ChartAxisTimeUnit
   langs:
