--- a/docs/docs-ref-autogen/excel/excel.charttitleposition.yml
+++ b/docs/docs-ref-autogen/excel/excel.charttitleposition.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 6d09cde0d6a1f753669ca6abb6ebbd50149fad74
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042443"
 items:
 - uid: excel.Excel.ChartTitlePosition
   summary: >-
-    <span data-ttu-id="3b24f-101">代表图表标题的位置。</span><span class="sxs-lookup"><span data-stu-id="3b24f-101">Represents the position of chart title.</span></span>
+    <span data-ttu-id="4b399-101">代表图表标题的位置。</span><span class="sxs-lookup"><span data-stu-id="4b399-101">Represents the position of chart title.</span></span>
 
 
-    <span data-ttu-id="3b24f-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b24f-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4b399-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4b399-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ChartTitlePosition
   fullName: excel.Excel.ChartTitlePosition
   langs:
