--- a/docs/docs-ref-autogen/excel/excel.charttrendlineformat.yml
+++ b/docs/docs-ref-autogen/excel/excel.charttrendlineformat.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 7863e8a96035a5311843d6d7e000d4503c3ac662
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042447"
 items:
 - uid: excel.Excel.ChartTrendlineFormat
   summary: >-
-    <span data-ttu-id="e0b8a-101">代表图表趋势线的格式属性。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-101">Represents the format properties for chart trendline.</span></span>
+    <span data-ttu-id="53fa4-101">代表图表趋势线的格式属性。</span><span class="sxs-lookup"><span data-stu-id="53fa4-101">Represents the format properties for chart trendline.</span></span>
 
 
-    <span data-ttu-id="e0b8a-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0b8a-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53fa4-102">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53fa4-102">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ChartTrendlineFormat
   fullName: excel.Excel.ChartTrendlineFormat
   langs:
@@ -26,10 +26,10 @@ items:
   - excel.Excel.ChartTrendlineFormat.toJSON
 - uid: excel.Excel.ChartTrendlineFormat.line
   summary: >-
-    <span data-ttu-id="e0b8a-p101">表示图表线条格式。只读。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-p101">Represents chart line formatting. Read-only.</span></span>
+    <span data-ttu-id="53fa4-p101">表示图表线条格式。只读。</span><span class="sxs-lookup"><span data-stu-id="53fa4-p101">Represents chart line formatting. Read-only.</span></span>
 
 
-    <span data-ttu-id="e0b8a-105">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0b8a-105">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53fa4-105">\[[API 集： ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53fa4-105">\[ [API set: ExcelApi 1.7](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: line
   fullName: excel.Excel.ChartTrendlineFormat.line
   langs:
@@ -40,17 +40,17 @@ items:
     return:
       type:
       - excel.Excel.ChartLineFormat
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"e0b8a-106\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"e0b8a-106\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n\n    // Get the color of the chart trendline. \n    // In this example, it's #4472c4 which is blue.\n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n    let line = trendline.format.line;\n    line.load(\"color\");\n\n    await context.sync();\n\n    console.log(\"The trendline color is:\" + line.color);\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n\n    // Set format of the trendline to a solid, red line.\n    let line = trendline.format.line;\n    line.color = '#FF0000';\n\n    await context.sync();\n\n    console.log(\"The trendline color has been set to:\" + line.color);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"53fa4-106\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"53fa4-106\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n\n    // Get the color of the chart trendline. \n    // In this example, it's #4472c4 which is blue.\n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n    let line = trendline.format.line;\n    line.load(\"color\");\n\n    await context.sync();\n\n    console.log(\"The trendline color is:\" + line.color);\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let seriesCollection = sheet.charts.getItemAt(0).series; \n    let trendline = seriesCollection.getItemAt(0).trendlines.getItem(0);\n\n    // Set format of the trendline to a solid, red line.\n    let line = trendline.format.line;\n    line.color = '#FF0000';\n\n    await context.sync();\n\n    console.log(\"The trendline color has been set to:\" + line.color);\n});\n```"
 - uid: excel.Excel.ChartTrendlineFormat.load
-  summary: <span data-ttu-id="e0b8a-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e0b8a-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-108">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="53fa4-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="53fa4-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="53fa4-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="53fa4-108">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="e0b8a-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="e0b8a-109">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="53fa4-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="53fa4-109">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="e0b8a-110">`load(option?: { select?: string; expand?: string; }): Excel.ChartTrendlineFormat`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-110">`load(option?: { select?: string; expand?: string; }): Excel.ChartTrendlineFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="53fa4-110">`load(option?: { select?: string; expand?: string; }): Excel.ChartTrendlineFormat`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="53fa4-110">`load(option?: { select?: string; expand?: string; }): Excel.ChartTrendlineFormat` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="e0b8a-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTrendlineFormat`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTrendlineFormat` - Only available on collection types.</span></span> <span data-ttu-id="e0b8a-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="e0b8a-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="e0b8a-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="e0b8a-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="53fa4-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTrendlineFormat`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="53fa4-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartTrendlineFormat` - Only available on collection types.</span></span> <span data-ttu-id="53fa4-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="53fa4-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="53fa4-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="53fa4-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="53fa4-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="53fa4-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="53fa4-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="53fa4-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: excel.Excel.ChartTrendlineFormat.load
   langs:
@@ -64,7 +64,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="e0b8a-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="e0b8a-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="53fa4-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="53fa4-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.ChartTrendlineFormat.toJSON
