--- a/docs/docs-ref-autogen/excel/excel.chartunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartunderlinestyle.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 2794c4e7fb0fd115198b341b995402f3d7409750
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042442"
 items:
 - uid: excel.Excel.ChartUnderlineStyle
-  summary: '<span data-ttu-id="a14ec-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a14ec-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="1ec4d-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1ec4d-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.ChartUnderlineStyle
   fullName: excel.Excel.ChartUnderlineStyle
   langs:
