--- a/docs/docs-ref-autogen/excel/excel.conditionalcellvaluerule.yml
+++ b/docs/docs-ref-autogen/excel/excel.conditionalcellvaluerule.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: fc137d8f402d290df2a37e02a2fa09513ab9731f
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042446"
 items:
 - uid: excel.Excel.ConditionalCellValueRule
   summary: >-
-    <span data-ttu-id="613fb-101">代表单元格值条件格式规则。</span><span class="sxs-lookup"><span data-stu-id="613fb-101">Represents a cell value conditional format rule.</span></span>
+    <span data-ttu-id="13b0a-101">代表单元格值条件格式规则。</span><span class="sxs-lookup"><span data-stu-id="13b0a-101">Represents a cell value conditional format rule.</span></span>
 
 
-    <span data-ttu-id="613fb-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="613fb-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13b0a-102">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13b0a-102">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ConditionalCellValueRule
   fullName: excel.Excel.ConditionalCellValueRule
   langs:
@@ -24,10 +24,10 @@ items:
   - excel.Excel.ConditionalCellValueRule.operator
 - uid: excel.Excel.ConditionalCellValueRule.formula1
   summary: >-
-    <span data-ttu-id="613fb-103">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="613fb-103">The formula, if required, to evaluate the conditional format rule on.</span></span>
+    <span data-ttu-id="13b0a-103">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="13b0a-103">The formula, if required, to evaluate the conditional format rule on.</span></span>
 
 
-    <span data-ttu-id="613fb-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="613fb-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13b0a-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13b0a-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: formula1
   fullName: excel.Excel.ConditionalCellValueRule.formula1
   langs:
@@ -38,13 +38,13 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"613fb-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"613fb-105\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B21:E23\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.cellValue);\n    conditionalFormat.cellValue.format.font.color = \"red\";\n    conditionalFormat.cellValue.rule = { formula1: \"=0\", operator: \"LessThan\" };\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"13b0a-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"13b0a-105\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B21:E23\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.cellValue);\n    conditionalFormat.cellValue.format.font.color = \"red\";\n    conditionalFormat.cellValue.rule = { formula1: \"=0\", operator: \"LessThan\" };\n\n    await context.sync();\n});\n```"
 - uid: excel.Excel.ConditionalCellValueRule.formula2
   summary: >-
-    <span data-ttu-id="613fb-106">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="613fb-106">The formula, if required, to evaluate the conditional format rule on.</span></span>
+    <span data-ttu-id="13b0a-106">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="13b0a-106">The formula, if required, to evaluate the conditional format rule on.</span></span>
 
 
-    <span data-ttu-id="613fb-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="613fb-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13b0a-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13b0a-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: formula2
   fullName: excel.Excel.ConditionalCellValueRule.formula2
   langs:
@@ -57,10 +57,10 @@ items:
       - string
 - uid: excel.Excel.ConditionalCellValueRule.operator
   summary: >-
-    <span data-ttu-id="613fb-108">文本条件格式的运算符。</span><span class="sxs-lookup"><span data-stu-id="613fb-108">The operator of the text conditional format.</span></span>
+    <span data-ttu-id="13b0a-108">文本条件格式的运算符。</span><span class="sxs-lookup"><span data-stu-id="13b0a-108">The operator of the text conditional format.</span></span>
 
 
-    <span data-ttu-id="613fb-109">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="613fb-109">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13b0a-109">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13b0a-109">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: operator
   fullName: excel.Excel.ConditionalCellValueRule.operator
   langs:
@@ -71,4 +71,4 @@ items:
     return:
       type:
       - Excel.ConditionalCellValueOperator | "Invalid" | "Between" | "NotBetween" | "EqualTo" | "NotEqualTo" | "GreaterThan" | "LessThan" | "GreaterThanOrEqual" | "LessThanOrEqual"
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"613fb-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"613fb-110\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B21:E23\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.cellValue);\n    conditionalFormat.cellValue.format.font.color = \"red\";\n    conditionalFormat.cellValue.rule = { formula1: \"=0\", operator: \"LessThan\" };\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"13b0a-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"13b0a-110\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B21:E23\");\n    const conditionalFormat = range.conditionalFormats\n        .add(Excel.ConditionalFormatType.cellValue);\n    conditionalFormat.cellValue.format.font.color = \"red\";\n    conditionalFormat.cellValue.rule = { formula1: \"=0\", operator: \"LessThan\" };\n\n    await context.sync();\n});\n```"
