--- a/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 1b600801cfc48c77c5949d0ac8661d656b974cd8
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042407"
 items:
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatData
-  summary: <span data-ttu-id="3c85b-101">描述调用"conditionalRangeFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3c85b-101">An interface describing the data returned by calling "conditionalRangeFormat.toJSON()".</span></span>
+  summary: <span data-ttu-id="41e17-101">描述调用"conditionalRangeFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="41e17-101">An interface describing the data returned by calling "conditionalRangeFormat.toJSON()".</span></span>
   name: Excel.Interfaces.ConditionalRangeFormatData
   fullName: excel.Excel.Interfaces.ConditionalRangeFormatData
   langs:
@@ -21,10 +21,10 @@ items:
   - excel.Excel.Interfaces.ConditionalRangeFormatData.numberFormat
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatData.borders
   summary: >-
-    <span data-ttu-id="3c85b-p101">应用于整个条件格式范围的 border 对象的集合。只读。</span><span class="sxs-lookup"><span data-stu-id="3c85b-p101">Collection of border objects that apply to the overall conditional format range. Read-only.</span></span>
+    <span data-ttu-id="41e17-p101">应用于整个条件格式范围的 border 对象的集合。只读。</span><span class="sxs-lookup"><span data-stu-id="41e17-p101">Collection of border objects that apply to the overall conditional format range. Read-only.</span></span>
 
 
-    <span data-ttu-id="3c85b-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c85b-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="41e17-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41e17-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: borders
   fullName: excel.Excel.Interfaces.ConditionalRangeFormatData.borders
   langs:
@@ -37,10 +37,10 @@ items:
       - Excel.Interfaces.ConditionalRangeBorderData[]
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatData.fill
   summary: >-
-    <span data-ttu-id="3c85b-p102">返回在整个条件格式范围内定义的 fill 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="3c85b-p102">Returns the fill object defined on the overall conditional format range. Read-only.</span></span>
+    <span data-ttu-id="41e17-p102">返回在整个条件格式范围内定义的 fill 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="41e17-p102">Returns the fill object defined on the overall conditional format range. Read-only.</span></span>
 
 
-    <span data-ttu-id="3c85b-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c85b-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="41e17-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41e17-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: fill
   fullName: excel.Excel.Interfaces.ConditionalRangeFormatData.fill
   langs:
@@ -53,10 +53,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFillData
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatData.font
   summary: >-
-    <span data-ttu-id="3c85b-p103">返回在整个条件格式范围内定义的 font 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="3c85b-p103">Returns the font object defined on the overall conditional format range. Read-only.</span></span>
+    <span data-ttu-id="41e17-p103">返回在整个条件格式范围内定义的 font 对象。只读。</span><span class="sxs-lookup"><span data-stu-id="41e17-p103">Returns the font object defined on the overall conditional format range. Read-only.</span></span>
 
 
-    <span data-ttu-id="3c85b-110">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c85b-110">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="41e17-110">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41e17-110">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: font
   fullName: excel.Excel.Interfaces.ConditionalRangeFormatData.font
   langs:
@@ -69,10 +69,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFontData
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatData.numberFormat
   summary: >-
-    <span data-ttu-id="3c85b-p104">表示 Excel 中指定范围的数字格式代码。当传递 null 时清除。</span><span class="sxs-lookup"><span data-stu-id="3c85b-p104">Represents Excel's number format code for the given range. Cleared if null is passed in.</span></span>
+    <span data-ttu-id="41e17-p104">表示 Excel 中指定范围的数字格式代码。当传递 null 时清除。</span><span class="sxs-lookup"><span data-stu-id="41e17-p104">Represents Excel's number format code for the given range. Cleared if null is passed in.</span></span>
 
 
-    <span data-ttu-id="3c85b-113">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3c85b-113">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="41e17-113">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="41e17-113">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: numberFormat
   fullName: excel.Excel.Interfaces.ConditionalRangeFormatData.numberFormat
   langs:
