--- a/docs/docs-ref-autogen/excel/excel.interfaces.custompropertycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.custompropertycollectiondata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: d819e36287f93125940154f3777d56bb35b80a86
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042414"
 items:
 - uid: excel.Excel.Interfaces.CustomPropertyCollectionData
-  summary: <span data-ttu-id="e454a-101">描述调用"customPropertyCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="e454a-101">An interface describing the data returned by calling "customPropertyCollection.toJSON()".</span></span>
+  summary: <span data-ttu-id="63665-101">描述调用"customPropertyCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="63665-101">An interface describing the data returned by calling "customPropertyCollection.toJSON()".</span></span>
   name: Excel.Interfaces.CustomPropertyCollectionData
   fullName: excel.Excel.Interfaces.CustomPropertyCollectionData
   langs:
