--- a/docs/docs-ref-autogen/excel/excel.interfaces.iconsetconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.iconsetconditionalformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: ba2152e0fb330e75c7ba7eca01a32cc7ee94dfed
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042406"
 items:
 - uid: excel.Excel.Interfaces.IconSetConditionalFormatData
-  summary: <span data-ttu-id="c4ef1-101">描述调用"iconSetConditionalFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-101">An interface describing the data returned by calling "iconSetConditionalFormat.toJSON()".</span></span>
+  summary: <span data-ttu-id="f76c3-101">描述调用"iconSetConditionalFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f76c3-101">An interface describing the data returned by calling "iconSetConditionalFormat.toJSON()".</span></span>
   name: Excel.Interfaces.IconSetConditionalFormatData
   fullName: excel.Excel.Interfaces.IconSetConditionalFormatData
   langs:
@@ -21,10 +21,10 @@ items:
   - excel.Excel.Interfaces.IconSetConditionalFormatData.style
 - uid: excel.Excel.Interfaces.IconSetConditionalFormatData.criteria
   summary: >-
-    <span data-ttu-id="c4ef1-102">有关规则和条件的图标的潜在自定义图标的条件和 IconSets 数组。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-102">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="c4ef1-103">请注意，第一个条件仅自定义图标可以修改，同时类型，公式，并将设置时忽略运算符。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-103">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
+    <span data-ttu-id="f76c3-102">有关规则和条件的图标的潜在自定义图标的条件和 IconSets 数组。</span><span class="sxs-lookup"><span data-stu-id="f76c3-102">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="f76c3-103">请注意，第一个条件仅自定义图标可以修改，同时类型，公式，并将设置时忽略运算符。</span><span class="sxs-lookup"><span data-stu-id="f76c3-103">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
 
 
-    <span data-ttu-id="c4ef1-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4ef1-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f76c3-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f76c3-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: criteria
   fullName: excel.Excel.Interfaces.IconSetConditionalFormatData.criteria
   langs:
@@ -37,10 +37,10 @@ items:
       - Excel.ConditionalIconCriterion[]
 - uid: excel.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
   summary: >-
-    <span data-ttu-id="c4ef1-p102">如果为 true，则反转 IconSet 的图标顺序。注意，如果使用自定义图标，则不能进行设置。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-p102">If true, reverses the icon orders for the IconSet. Note that this cannot be set if custom icons are used.</span></span>
+    <span data-ttu-id="f76c3-p102">如果为 true，则反转 IconSet 的图标顺序。注意，如果使用自定义图标，则不能进行设置。</span><span class="sxs-lookup"><span data-stu-id="f76c3-p102">If true, reverses the icon orders for the IconSet. Note that this cannot be set if custom icons are used.</span></span>
 
 
-    <span data-ttu-id="c4ef1-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4ef1-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f76c3-107">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f76c3-107">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: reverseIconOrder
   fullName: excel.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
   langs:
@@ -53,10 +53,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
   summary: >-
-    <span data-ttu-id="c4ef1-108">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-108">If true, hides the values and only shows icons.</span></span>
+    <span data-ttu-id="f76c3-108">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="f76c3-108">If true, hides the values and only shows icons.</span></span>
 
 
-    <span data-ttu-id="c4ef1-109">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4ef1-109">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f76c3-109">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f76c3-109">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: showIconOnly
   fullName: excel.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
   langs:
@@ -69,10 +69,10 @@ items:
       - boolean
 - uid: excel.Excel.Interfaces.IconSetConditionalFormatData.style
   summary: >-
-    <span data-ttu-id="c4ef1-110">如果设置，将显示用于条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="c4ef1-110">If set, displays the IconSet option for the conditional format.</span></span>
+    <span data-ttu-id="f76c3-110">如果设置，将显示用于条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="f76c3-110">If set, displays the IconSet option for the conditional format.</span></span>
 
 
-    <span data-ttu-id="c4ef1-111">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4ef1-111">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="f76c3-111">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f76c3-111">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: style
   fullName: excel.Excel.Interfaces.IconSetConditionalFormatData.style
   langs:
