--- a/docs/docs-ref-autogen/excel/excel.interfaces.stylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.stylecollectionupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 557902c3dba6493bb932aa28f7573df947421648
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042448"
 items:
 - uid: excel.Excel.Interfaces.StyleCollectionUpdateData
-  summary: <span data-ttu-id="f0c37-101">更新数据的 StyleCollection 对象，在"styleCollection.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="f0c37-101">An interface for updating data on the StyleCollection object, for use in "styleCollection.set({ ... })".</span></span>
+  summary: <span data-ttu-id="9db3e-101">更新数据的 StyleCollection 对象，在"styleCollection.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="9db3e-101">An interface for updating data on the StyleCollection object, for use in "styleCollection.set({ ... })".</span></span>
   name: Excel.Interfaces.StyleCollectionUpdateData
   fullName: excel.Excel.Interfaces.StyleCollectionUpdateData
   langs:
