--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablecollectiondata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 9bf3debb0759123f4e41fdf51e16c0efd56ecc7f
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042470"
 items:
 - uid: excel.Excel.Interfaces.TableCollectionData
-  summary: <span data-ttu-id="1ea78-101">描述调用"tableCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="1ea78-101">An interface describing the data returned by calling "tableCollection.toJSON()".</span></span>
+  summary: <span data-ttu-id="403ba-101">描述调用"tableCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="403ba-101">An interface describing the data returned by calling "tableCollection.toJSON()".</span></span>
   name: Excel.Interfaces.TableCollectionData
   fullName: excel.Excel.Interfaces.TableCollectionData
   langs:
