--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablerowcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablerowcollectionupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 85cb31d81e94e9687069bda4f031c558f374c287
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042449"
 items:
 - uid: excel.Excel.Interfaces.TableRowCollectionUpdateData
-  summary: <span data-ttu-id="7540c-101">更新数据的 TableRowCollection 对象，在"tableRowCollection.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="7540c-101">An interface for updating data on the TableRowCollection object, for use in "tableRowCollection.set({ ... })".</span></span>
+  summary: <span data-ttu-id="36233-101">更新数据的 TableRowCollection 对象，在"tableRowCollection.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="36233-101">An interface for updating data on the TableRowCollection object, for use in "tableRowCollection.set({ ... })".</span></span>
   name: Excel.Interfaces.TableRowCollectionUpdateData
   fullName: excel.Excel.Interfaces.TableRowCollectionUpdateData
   langs:
