--- a/docs/docs-ref-autogen/excel/excel.interfaces.textconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.textconditionalformatdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: a7faefaa857e61fa4b9329400d6dca2625eee709
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042452"
 items:
 - uid: excel.Excel.Interfaces.TextConditionalFormatData
-  summary: <span data-ttu-id="9e87e-101">描述调用"textConditionalFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="9e87e-101">An interface describing the data returned by calling "textConditionalFormat.toJSON()".</span></span>
+  summary: <span data-ttu-id="53a65-101">描述调用"textConditionalFormat.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="53a65-101">An interface describing the data returned by calling "textConditionalFormat.toJSON()".</span></span>
   name: Excel.Interfaces.TextConditionalFormatData
   fullName: excel.Excel.Interfaces.TextConditionalFormatData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.TextConditionalFormatData.rule
 - uid: excel.Excel.Interfaces.TextConditionalFormatData.format
   summary: >-
-    <span data-ttu-id="9e87e-p101">返回一个格式对象，其中封装了条件格式字体、填充、边框和其他属性。只读。</span><span class="sxs-lookup"><span data-stu-id="9e87e-p101">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties. Read-only.</span></span>
+    <span data-ttu-id="53a65-p101">返回一个格式对象，其中封装了条件格式字体、填充、边框和其他属性。只读。</span><span class="sxs-lookup"><span data-stu-id="53a65-p101">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties. Read-only.</span></span>
 
 
-    <span data-ttu-id="9e87e-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e87e-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53a65-104">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53a65-104">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: format
   fullName: excel.Excel.Interfaces.TextConditionalFormatData.format
   langs:
@@ -35,10 +35,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFormatData
 - uid: excel.Excel.Interfaces.TextConditionalFormatData.rule
   summary: >-
-    <span data-ttu-id="9e87e-105">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="9e87e-105">The rule of the conditional format.</span></span>
+    <span data-ttu-id="53a65-105">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="53a65-105">The rule of the conditional format.</span></span>
 
 
-    <span data-ttu-id="9e87e-106">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e87e-106">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="53a65-106">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="53a65-106">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: rule
   fullName: excel.Excel.Interfaces.TextConditionalFormatData.rule
   langs:
