--- a/docs/docs-ref-autogen/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.topbottomconditionalformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 883c942ce1dab2fbf688b4c655b2f585df816d25
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042333"
 items:
 - uid: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData
-  summary: <span data-ttu-id="0d801-101">更新数据的 TopBottomConditionalFormat 对象，在"topBottomConditionalFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="0d801-101">An interface for updating data on the TopBottomConditionalFormat object, for use in "topBottomConditionalFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="9df1e-101">更新数据的 TopBottomConditionalFormat 对象，在"topBottomConditionalFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="9df1e-101">An interface for updating data on the TopBottomConditionalFormat object, for use in "topBottomConditionalFormat.set({ ... })".</span></span>
   name: Excel.Interfaces.TopBottomConditionalFormatUpdateData
   fullName: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData
   langs:
@@ -19,10 +19,10 @@ items:
   - excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData.rule
 - uid: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData.format
   summary: >-
-    <span data-ttu-id="0d801-102">返回一个格式对象，封装的条件格式字体、 填充、 边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="0d801-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+    <span data-ttu-id="9df1e-102">返回一个格式对象，封装的条件格式字体、 填充、 边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="9df1e-102">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
 
-    <span data-ttu-id="0d801-103">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d801-103">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9df1e-103">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9df1e-103">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: format
   fullName: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData.format
   langs:
@@ -35,10 +35,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFormatUpdateData
 - uid: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData.rule
   summary: >-
-    <span data-ttu-id="0d801-104">如上/下条件格式条件。</span><span class="sxs-lookup"><span data-stu-id="0d801-104">The criteria of the Top/Bottom conditional format.</span></span>
+    <span data-ttu-id="9df1e-104">如上/下条件格式条件。</span><span class="sxs-lookup"><span data-stu-id="9df1e-104">The criteria of the Top/Bottom conditional format.</span></span>
 
 
-    <span data-ttu-id="0d801-105">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0d801-105">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9df1e-105">\[[API 集： ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9df1e-105">\[ [API set: ExcelApi 1.6](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: rule
   fullName: excel.Excel.Interfaces.TopBottomConditionalFormatUpdateData.rule
   langs:
