--- a/docs/docs-ref-autogen/excel/excel.rangefont.yml
+++ b/docs/docs-ref-autogen/excel/excel.rangefont.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 36b8e41dcbd8b90366719f4a1a11569f9a0e44c1
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042415"
 items:
 - uid: excel.Excel.RangeFont
   summary: >-
-    <span data-ttu-id="73b6f-101">此对象表示对象的字体属性（字体名称、字号、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="73b6f-101">This object represents the font attributes (font name, font size, color, etc.) for an object.</span></span>
+    <span data-ttu-id="13543-101">此对象表示对象的字体属性（字体名称、字号、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="13543-101">This object represents the font attributes (font name, font size, color, etc.) for an object.</span></span>
 
 
-    <span data-ttu-id="73b6f-102">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-102">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-102">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-102">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.RangeFont
   fullName: excel.Excel.RangeFont
   langs:
@@ -31,10 +31,10 @@ items:
   - excel.Excel.RangeFont.underline
 - uid: excel.Excel.RangeFont.bold
   summary: >-
-    <span data-ttu-id="73b6f-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="73b6f-103">Represents the bold status of font.</span></span>
+    <span data-ttu-id="13543-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="13543-103">Represents the bold status of font.</span></span>
 
 
-    <span data-ttu-id="73b6f-104">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-104">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-104">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-104">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: bold
   fullName: excel.Excel.RangeFont.bold
   langs:
@@ -47,10 +47,10 @@ items:
       - boolean
 - uid: excel.Excel.RangeFont.color
   summary: >-
-    <span data-ttu-id="73b6f-105">HTML 颜色代码的表示形式的文本颜色。</span><span class="sxs-lookup"><span data-stu-id="73b6f-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="73b6f-106">例如，</span><span class="sxs-lookup"><span data-stu-id="73b6f-106">E.g.</span></span> <span data-ttu-id="73b6f-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="73b6f-107">\#FF0000 represents Red.</span></span>
+    <span data-ttu-id="13543-105">HTML 颜色代码的表示形式的文本颜色。</span><span class="sxs-lookup"><span data-stu-id="13543-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="13543-106">例如，</span><span class="sxs-lookup"><span data-stu-id="13543-106">E.g.</span></span> <span data-ttu-id="13543-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="13543-107">\#FF0000 represents Red.</span></span>
 
 
-    <span data-ttu-id="73b6f-108">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-108">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-108">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-108">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: excel.Excel.RangeFont.color
   langs:
@@ -63,10 +63,10 @@ items:
       - string
 - uid: excel.Excel.RangeFont.italic
   summary: >-
-    <span data-ttu-id="73b6f-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="73b6f-109">Represents the italic status of the font.</span></span>
+    <span data-ttu-id="13543-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="13543-109">Represents the italic status of the font.</span></span>
 
 
-    <span data-ttu-id="73b6f-110">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-110">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-110">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-110">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: italic
   fullName: excel.Excel.RangeFont.italic
   langs:
@@ -78,8 +78,8 @@ items:
       type:
       - boolean
 - uid: excel.Excel.RangeFont.load
-  summary: <span data-ttu-id="73b6f-111">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="73b6f-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="73b6f-112">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="73b6f-112">You must call "context.sync()" before reading the properties.</span></span>
-  remarks: "<span data-ttu-id=\"73b6f-113\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-113\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"73b6f-114\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFont`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-114\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFont` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"73b6f-115\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFont`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-115\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFont` - Only available on collection types.</span></span> <span data-ttu-id=\"73b6f-116\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-116\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"73b6f-117\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-117\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"73b6f-118\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-118\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"73b6f-119\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-119\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"73b6f-120\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"73b6f-120\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFont = range.format.font;\n    rangeFont.load('name');\n    return ctx.sync().then(function() {\n        console.log(rangeFont.name);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\n// The example below sets font name. \nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var range = ctx.workbook.worksheets.getItem(sheetName).getRange(rangeAddress);\n    range.format.font.name = 'Times New Roman';\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  summary: <span data-ttu-id="13543-111">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="13543-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="13543-112">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="13543-112">You must call "context.sync()" before reading the properties.</span></span>
+  remarks: "<span data-ttu-id=\"13543-113\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-113\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"13543-114\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFont`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-114\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFont` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"13543-115\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFont`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-115\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFont` - Only available on collection types.</span></span> <span data-ttu-id=\"13543-116\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-116\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"13543-117\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-117\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"13543-118\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-118\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"13543-119\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-119\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"13543-120\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"13543-120\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFont = range.format.font;\n    rangeFont.load('name');\n    return ctx.sync().then(function() {\n        console.log(rangeFont.name);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\n// The example below sets font name. \nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var range = ctx.workbook.worksheets.getItem(sheetName).getRange(rangeAddress);\n    range.format.font.name = 'Times New Roman';\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   name: load(option)
   fullName: excel.Excel.RangeFont.load
   langs:
@@ -93,15 +93,15 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="73b6f-121">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="73b6f-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="13543-121">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="13543-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.RangeFont.name
   summary: >-
-    <span data-ttu-id="73b6f-122">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="73b6f-122">Font name (e.g. "Calibri")</span></span>
+    <span data-ttu-id="13543-122">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="13543-122">Font name (e.g. "Calibri")</span></span>
 
 
-    <span data-ttu-id="73b6f-123">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-123">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-123">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-123">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: name
   fullName: excel.Excel.RangeFont.name
   langs:
@@ -114,10 +114,10 @@ items:
       - string
 - uid: excel.Excel.RangeFont.size
   summary: >-
-    <span data-ttu-id="73b6f-124">字号</span><span class="sxs-lookup"><span data-stu-id="73b6f-124">Font size.</span></span>
+    <span data-ttu-id="13543-124">字号</span><span class="sxs-lookup"><span data-stu-id="13543-124">Font size.</span></span>
 
 
-    <span data-ttu-id="73b6f-125">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-125">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-125">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-125">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: size
   fullName: excel.Excel.RangeFont.size
   langs:
@@ -142,10 +142,10 @@ items:
       description: ''
 - uid: excel.Excel.RangeFont.underline
   summary: >-
-    <span data-ttu-id="73b6f-126">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="73b6f-126">Type of underline applied to the font.</span></span> <span data-ttu-id="73b6f-127">有关详细信息，请参阅 Excel.RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="73b6f-127">See Excel.RangeUnderlineStyle for details.</span></span>
+    <span data-ttu-id="13543-126">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="13543-126">Type of underline applied to the font.</span></span> <span data-ttu-id="13543-127">有关详细信息，请参阅 Excel.RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="13543-127">See Excel.RangeUnderlineStyle for details.</span></span>
 
 
-    <span data-ttu-id="73b6f-128">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="73b6f-128">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="13543-128">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="13543-128">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: underline
   fullName: excel.Excel.RangeFont.underline
   langs:
