--- a/docs/docs-ref-autogen/excel/excel.rangeunderlinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.rangeunderlinestyle.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 42e14b154f3813acdda34982cdd887855f8c1bda
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042451"
 items:
 - uid: excel.Excel.RangeUnderlineStyle
-  summary: '<span data-ttu-id="ac3e0-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac3e0-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="f4da9-101">\[[API 集： ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f4da9-101">\[ [API set: ExcelApi 1.1](/javascript/office/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.RangeUnderlineStyle
   fullName: excel.Excel.RangeUnderlineStyle
   langs:
