--- a/docs/docs-ref-autogen/office/office.setbindingdataoptions.yml
+++ b/docs/docs-ref-autogen/office/office.setbindingdataoptions.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 93031db87554acbf84194ab34de80a1c24addbc9
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042282"
 items:
 - uid: office.Office.SetBindingDataOptions
-  summary: <span data-ttu-id="4c443-101">提供有关如何将数据绑定中设置选项。</span><span class="sxs-lookup"><span data-stu-id="4c443-101">Provides options for how to set the data in a binding.</span></span>
-  remarks: <span data-ttu-id="4c443-102">如果使用行选项，则值必须是"thisRow"。</span><span class="sxs-lookup"><span data-stu-id="4c443-102">If the rows option is used, the value must be "thisRow".</span></span>
+  summary: <span data-ttu-id="f4c81-101">提供有关如何将数据绑定中设置选项。</span><span class="sxs-lookup"><span data-stu-id="f4c81-101">Provides options for how to set the data in a binding.</span></span>
+  remarks: <span data-ttu-id="f4c81-102">如果使用行选项，则值必须是"thisRow"。</span><span class="sxs-lookup"><span data-stu-id="f4c81-102">If the rows option is used, the value must be "thisRow".</span></span>
   name: Office.SetBindingDataOptions
   fullName: office.Office.SetBindingDataOptions
   langs:
@@ -25,7 +25,7 @@ items:
   - office.Office.SetBindingDataOptions.startRow
   - office.Office.SetBindingDataOptions.tableOptions
 - uid: office.Office.SetBindingDataOptions.asyncContext
-  summary: <span data-ttu-id="4c443-103">在传递给回调的 AsyncResult 对象的 asyncContext 属性中，返回，任何类型的用户定义项不变。</span><span class="sxs-lookup"><span data-stu-id="4c443-103">A user-defined item of any type that is returned, unchanged, in the asyncContext property of the AsyncResult object that is passed to a callback.</span></span>
+  summary: <span data-ttu-id="f4c81-103">在传递给回调的 AsyncResult 对象的 asyncContext 属性中，返回，任何类型的用户定义项不变。</span><span class="sxs-lookup"><span data-stu-id="f4c81-103">A user-defined item of any type that is returned, unchanged, in the asyncContext property of the AsyncResult object that is passed to a callback.</span></span>
   name: asyncContext
   fullName: office.Office.SetBindingDataOptions.asyncContext
   langs:
@@ -38,10 +38,10 @@ items:
       - any
 - uid: office.Office.SetBindingDataOptions.cellFormat
   summary: >-
-    <span data-ttu-id="4c443-104">只有与绑定类型表和的 data 形参传递 TableData 对象时使用。</span><span class="sxs-lookup"><span data-stu-id="4c443-104">Use only with binding type table and when a TableData object is passed for the data parameter.</span></span> <span data-ttu-id="4c443-105">指定的列、 行或单元格范围和键 / 值对的形式指定要应用于该区域的格式的单元格的对象的数组。</span><span class="sxs-lookup"><span data-stu-id="4c443-105">An array of objects that specify a range of columns, rows, or cells and specify, as key-value pairs, the cell formatting to apply to that range.</span></span>
+    <span data-ttu-id="f4c81-104">只有与绑定类型表和的 data 形参传递 TableData 对象时使用。</span><span class="sxs-lookup"><span data-stu-id="f4c81-104">Use only with binding type table and when a TableData object is passed for the data parameter.</span></span> <span data-ttu-id="f4c81-105">指定的列、 行或单元格范围和键 / 值对的形式指定要应用于该区域的格式的单元格的对象的数组。</span><span class="sxs-lookup"><span data-stu-id="f4c81-105">An array of objects that specify a range of columns, rows, or cells and specify, as key-value pairs, the cell formatting to apply to that range.</span></span>
 
 
-    <span data-ttu-id="4c443-106">示例：`\[{cells: Office.Table.Data, format: {fontColor: "yellow"}}, {cells: {row: 3, column: 4}, format: {borderColor: "white", fontStyle: "bold"}}\]`</span><span class="sxs-lookup"><span data-stu-id="4c443-106">Example: `\[{cells: Office.Table.Data, format: {fontColor: "yellow"}}, {cells: {row: 3, column: 4}, format: {borderColor: "white", fontStyle: "bold"}}\]`</span></span>
+    <span data-ttu-id="f4c81-106">示例：`\[{cells: Office.Table.Data, format: {fontColor: "yellow"}}, {cells: {row: 3, column: 4}, format: {borderColor: "white", fontStyle: "bold"}}\]`</span><span class="sxs-lookup"><span data-stu-id="f4c81-106">Example: `\[{cells: Office.Table.Data, format: {fontColor: "yellow"}}, {cells: {row: 3, column: 4}, format: {borderColor: "white", fontStyle: "bold"}}\]`</span></span>
   name: cellFormat
   fullName: office.Office.SetBindingDataOptions.cellFormat
   langs:
@@ -53,7 +53,7 @@ items:
       type:
       - Array<RangeFormatConfiguration>
 - uid: office.Office.SetBindingDataOptions.coercionType
-  summary: <span data-ttu-id="4c443-107">显式设置的数据对象的形状。</span><span class="sxs-lookup"><span data-stu-id="4c443-107">Explicitly sets the shape of the data object.</span></span> <span data-ttu-id="4c443-108">如果未提供推断从数据类型。</span><span class="sxs-lookup"><span data-stu-id="4c443-108">If not supplied is inferred from the data type.</span></span>
+  summary: <span data-ttu-id="f4c81-107">显式设置的数据对象的形状。</span><span class="sxs-lookup"><span data-stu-id="f4c81-107">Explicitly sets the shape of the data object.</span></span> <span data-ttu-id="f4c81-108">如果未提供推断从数据类型。</span><span class="sxs-lookup"><span data-stu-id="f4c81-108">If not supplied is inferred from the data type.</span></span>
   name: coercionType
   fullName: office.Office.SetBindingDataOptions.coercionType
   langs:
@@ -65,7 +65,7 @@ items:
       type:
       - Office.CoercionType | string
 - uid: office.Office.SetBindingDataOptions.columns
-  summary: <span data-ttu-id="4c443-109">仅针对 Access 相关内容外接程序中的表绑定。</span><span class="sxs-lookup"><span data-stu-id="4c443-109">Only for table bindings in content add-ins for Access.</span></span> <span data-ttu-id="4c443-110">字符串数组。</span><span class="sxs-lookup"><span data-stu-id="4c443-110">Array of strings.</span></span> <span data-ttu-id="4c443-111">指定列名称。</span><span class="sxs-lookup"><span data-stu-id="4c443-111">Specifies the column names.</span></span>
+  summary: <span data-ttu-id="f4c81-109">仅针对 Access 相关内容外接程序中的表绑定。</span><span class="sxs-lookup"><span data-stu-id="f4c81-109">Only for table bindings in content add-ins for Access.</span></span> <span data-ttu-id="f4c81-110">字符串数组。</span><span class="sxs-lookup"><span data-stu-id="f4c81-110">Array of strings.</span></span> <span data-ttu-id="f4c81-111">指定列名称。</span><span class="sxs-lookup"><span data-stu-id="f4c81-111">Specifies the column names.</span></span>
   name: columns
   fullName: office.Office.SetBindingDataOptions.columns
   langs:
@@ -77,7 +77,7 @@ items:
       type:
       - Array<string>
 - uid: office.Office.SetBindingDataOptions.rows
-  summary: <span data-ttu-id="4c443-112">仅针对 Access 相关内容外接程序中的表绑定。</span><span class="sxs-lookup"><span data-stu-id="4c443-112">Only for table bindings in content add-ins for Access.</span></span> <span data-ttu-id="4c443-113">指定预定义的字符串"thisRow"以获取当前所选行中的数据。</span><span class="sxs-lookup"><span data-stu-id="4c443-113">Specifies the pre-defined string "thisRow" to get data in the currently selected row.</span></span>
+  summary: <span data-ttu-id="f4c81-112">仅针对 Access 相关内容外接程序中的表绑定。</span><span class="sxs-lookup"><span data-stu-id="f4c81-112">Only for table bindings in content add-ins for Access.</span></span> <span data-ttu-id="f4c81-113">指定预定义的字符串"thisRow"以获取当前所选行中的数据。</span><span class="sxs-lookup"><span data-stu-id="f4c81-113">Specifies the pre-defined string "thisRow" to get data in the currently selected row.</span></span>
   name: rows
   fullName: office.Office.SetBindingDataOptions.rows
   langs:
@@ -89,7 +89,7 @@ items:
       type:
       - string
 - uid: office.Office.SetBindingDataOptions.startColumn
-  summary: <span data-ttu-id="4c443-114">为数据子集指定基于零的起始列。</span><span class="sxs-lookup"><span data-stu-id="4c443-114">Specifies the zero-based starting column for a subset of the data.</span></span> <span data-ttu-id="4c443-115">仅对表或矩阵绑定。</span><span class="sxs-lookup"><span data-stu-id="4c443-115">Only for table or matrix bindings.</span></span> <span data-ttu-id="4c443-116">如果省略，启动在第一列中设置数据。</span><span class="sxs-lookup"><span data-stu-id="4c443-116">If omitted, data is set starting in the first column.</span></span>
+  summary: <span data-ttu-id="f4c81-114">为数据子集指定基于零的起始列。</span><span class="sxs-lookup"><span data-stu-id="f4c81-114">Specifies the zero-based starting column for a subset of the data.</span></span> <span data-ttu-id="f4c81-115">仅对表或矩阵绑定。</span><span class="sxs-lookup"><span data-stu-id="f4c81-115">Only for table or matrix bindings.</span></span> <span data-ttu-id="f4c81-116">如果省略，启动在第一列中设置数据。</span><span class="sxs-lookup"><span data-stu-id="f4c81-116">If omitted, data is set starting in the first column.</span></span>
   name: startColumn
   fullName: office.Office.SetBindingDataOptions.startColumn
   langs:
@@ -101,7 +101,7 @@ items:
       type:
       - number
 - uid: office.Office.SetBindingDataOptions.startRow
-  summary: <span data-ttu-id="4c443-117">为绑定中的数据子集指定基于零的开始行。</span><span class="sxs-lookup"><span data-stu-id="4c443-117">Specifies the zero-based starting row for a subset of the data in the binding.</span></span> <span data-ttu-id="4c443-118">仅对表或矩阵绑定。</span><span class="sxs-lookup"><span data-stu-id="4c443-118">Only for table or matrix bindings.</span></span> <span data-ttu-id="4c443-119">如果省略，启动的第一行中设置数据。</span><span class="sxs-lookup"><span data-stu-id="4c443-119">If omitted, data is set starting in the first row.</span></span>
+  summary: <span data-ttu-id="f4c81-117">为绑定中的数据子集指定基于零的开始行。</span><span class="sxs-lookup"><span data-stu-id="f4c81-117">Specifies the zero-based starting row for a subset of the data in the binding.</span></span> <span data-ttu-id="f4c81-118">仅对表或矩阵绑定。</span><span class="sxs-lookup"><span data-stu-id="f4c81-118">Only for table or matrix bindings.</span></span> <span data-ttu-id="f4c81-119">如果省略，启动的第一行中设置数据。</span><span class="sxs-lookup"><span data-stu-id="f4c81-119">If omitted, data is set starting in the first row.</span></span>
   name: startRow
   fullName: office.Office.SetBindingDataOptions.startRow
   langs:
@@ -113,7 +113,7 @@ items:
       type:
       - number
 - uid: office.Office.SetBindingDataOptions.tableOptions
-  summary: '<span data-ttu-id="4c443-120">对于插入的表，表格格式选项，如标题行、 总计行和带状的行指定的键 / 值对的列表。</span><span class="sxs-lookup"><span data-stu-id="4c443-120">For an inserted table, a list of key-value pairs that specify table formatting options, such as header row, total row, and banded rows.</span></span> <span data-ttu-id="4c443-121">示例：`{bandedRows: true, filterButton: false}`</span><span class="sxs-lookup"><span data-stu-id="4c443-121">Example: `{bandedRows: true, filterButton: false}`</span></span>'
+  summary: '<span data-ttu-id="f4c81-120">对于插入的表，表格格式选项，如标题行、 总计行和带状的行指定的键 / 值对的列表。</span><span class="sxs-lookup"><span data-stu-id="f4c81-120">For an inserted table, a list of key-value pairs that specify table formatting options, such as header row, total row, and banded rows.</span></span> <span data-ttu-id="f4c81-121">示例：`{bandedRows: true, filterButton: false}`</span><span class="sxs-lookup"><span data-stu-id="f4c81-121">Example: `{bandedRows: true, filterButton: false}`</span></span>'
   name: tableOptions
   fullName: office.Office.SetBindingDataOptions.tableOptions
   langs:
