--- a/docs/docs-ref-autogen/office/officeextension.eventhandlers.yml
+++ b/docs/docs-ref-autogen/office/officeextension.eventhandlers.yml
@@ -1,9 +1,9 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: faca8a9894f68ff8b8cd0f4e4bf56db634a6c566
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042359"
 items:
 - uid: office.OfficeExtension.EventHandlers
@@ -18,7 +18,7 @@ items:
   - office.OfficeExtension.EventHandlers.add
   - office.OfficeExtension.EventHandlers.remove
 - uid: office.OfficeExtension.EventHandlers.constructor
-  summary: <span data-ttu-id="64263-101">构造的[事件处理](xref:office.OfficeExtension.EventHandlers)类的新实例</span><span class="sxs-lookup"><span data-stu-id="64263-101">Constructs a new instance of the [EventHandlers](xref:office.OfficeExtension.EventHandlers) class</span></span>
+  summary: <span data-ttu-id="8bc22-101">构造的[事件处理](xref:office.OfficeExtension.EventHandlers)类的新实例</span><span class="sxs-lookup"><span data-stu-id="8bc22-101">Constructs a new instance of the [EventHandlers](xref:office.OfficeExtension.EventHandlers) class</span></span>
   name: constructor(context, parentObject, name, eventInfo)
   fullName: office.OfficeExtension.EventHandlers.constructor
   langs:
