--- a/docs/docs-ref-autogen/office/officeextension.requestcontextdebuginfo.yml
+++ b/docs/docs-ref-autogen/office/officeextension.requestcontextdebuginfo.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 45d121bf8ff6a0e0d0a5ec6b88a0d4be7e3d13fc
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042346"
 items:
 - uid: office.OfficeExtension.RequestContextDebugInfo
-  summary: <span data-ttu-id="0f702-101">包含调试信息请求上下文。</span><span class="sxs-lookup"><span data-stu-id="0f702-101">Contains debug information about the request context.</span></span>
+  summary: <span data-ttu-id="d99b4-101">包含调试信息请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d99b4-101">Contains debug information about the request context.</span></span>
   name: OfficeExtension.RequestContextDebugInfo
   fullName: office.OfficeExtension.RequestContextDebugInfo
   langs:
@@ -18,10 +18,10 @@ items:
   - office.OfficeExtension.RequestContextDebugInfo.pendingStatements
 - uid: office.OfficeExtension.RequestContextDebugInfo.pendingStatements
   summary: >-
-    <span data-ttu-id="0f702-102">在主机中执行的语句。</span><span class="sxs-lookup"><span data-stu-id="0f702-102">The statements to be executed in the host.</span></span>
+    <span data-ttu-id="d99b4-102">在主机中执行的语句。</span><span class="sxs-lookup"><span data-stu-id="d99b4-102">The statements to be executed in the host.</span></span>
 
 
-    <span data-ttu-id="0f702-103">这些语句可能不写入，完全匹配代码，但将关闭近似。</span><span class="sxs-lookup"><span data-stu-id="0f702-103">These statements may not match the code exactly as written, but will be a close approximation.</span></span>
+    <span data-ttu-id="d99b4-103">这些语句可能不写入，完全匹配代码，但将关闭近似。</span><span class="sxs-lookup"><span data-stu-id="d99b4-103">These statements may not match the code exactly as written, but will be a close approximation.</span></span>
   name: pendingStatements
   fullName: office.OfficeExtension.RequestContextDebugInfo.pendingStatements
   langs:
