--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.applicationdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.applicationdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: d2dd7201ddf4dc895f67906964c58b82e9a17da0
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042281"
 items:
 - uid: onenote.OneNote.Interfaces.ApplicationData
-  summary: <span data-ttu-id="e86ed-101">描述调用"application.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="e86ed-101">An interface describing the data returned by calling "application.toJSON()".</span></span>
+  summary: <span data-ttu-id="fc5d6-101">描述调用"application.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fc5d6-101">An interface describing the data returned by calling "application.toJSON()".</span></span>
   name: OneNote.Interfaces.ApplicationData
   fullName: onenote.OneNote.Interfaces.ApplicationData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.ApplicationData.notebooks
 - uid: onenote.OneNote.Interfaces.ApplicationData.notebooks
   summary: >-
-    <span data-ttu-id="e86ed-p101">获取 OneNote 应用程序实例中打开的笔记本集合。在 OneNote Online 的应用程序实例中，笔记本一次仅能打开一个。只读。</span><span class="sxs-lookup"><span data-stu-id="e86ed-p101">Gets the collection of notebooks that are open in the OneNote application instance. In OneNote Online, only one notebook at a time is open in the application instance. Read-only.</span></span>
+    <span data-ttu-id="fc5d6-p101">获取 OneNote 应用程序实例中打开的笔记本集合。在 OneNote Online 的应用程序实例中，笔记本一次仅能打开一个。只读。</span><span class="sxs-lookup"><span data-stu-id="fc5d6-p101">Gets the collection of notebooks that are open in the OneNote application instance. In OneNote Online, only one notebook at a time is open in the application instance. Read-only.</span></span>
 
 
-    <span data-ttu-id="e86ed-105">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e86ed-105">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="fc5d6-105">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc5d6-105">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: notebooks
   fullName: onenote.OneNote.Interfaces.ApplicationData.notebooks
   langs:
