--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tablecellcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tablecellcollectiondata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: ec0e2c04db9f57df62d42ebe56539f2436c0deda
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042292"
 items:
 - uid: onenote.OneNote.Interfaces.TableCellCollectionData
-  summary: <span data-ttu-id="008b1-101">描述调用"tableCellCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="008b1-101">An interface describing the data returned by calling "tableCellCollection.toJSON()".</span></span>
+  summary: <span data-ttu-id="5087c-101">描述调用"tableCellCollection.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="5087c-101">An interface describing the data returned by calling "tableCellCollection.toJSON()".</span></span>
   name: OneNote.Interfaces.TableCellCollectionData
   fullName: onenote.OneNote.Interfaces.TableCellCollectionData
   langs:
