--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 3b2b0a66cf9b1a492cda4816ee4a90138d7797f6
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042365"
 items:
 - uid: onenote.OneNote.Interfaces.TableUpdateData
-  summary: <span data-ttu-id="80479-101">Table 对象，用于"table.set （{...}）"的数据更新接口。</span><span class="sxs-lookup"><span data-stu-id="80479-101">An interface for updating data on the Table object, for use in "table.set({ ... })".</span></span>
+  summary: <span data-ttu-id="049d9-101">Table 对象，用于"table.set （{...}）"的数据更新接口。</span><span class="sxs-lookup"><span data-stu-id="049d9-101">An interface for updating data on the Table object, for use in "table.set({ ... })".</span></span>
   name: OneNote.Interfaces.TableUpdateData
   fullName: onenote.OneNote.Interfaces.TableUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.TableUpdateData.borderVisible
 - uid: onenote.OneNote.Interfaces.TableUpdateData.borderVisible
   summary: >-
-    <span data-ttu-id="80479-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="80479-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
+    <span data-ttu-id="049d9-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="049d9-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
 
 
-    <span data-ttu-id="80479-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="80479-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="049d9-104">\[[API 集： OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="049d9-104">\[ [API set: OneNoteApi 1.1](/javascript/office/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: borderVisible
   fullName: onenote.OneNote.Interfaces.TableUpdateData.borderVisible
   langs:
