--- a/docs/docs-ref-autogen/outlook/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook/office.contact.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 0ff7f4ad940a14d27fc14ad35230094b12d50676
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042357"
 items:
 - uid: outlook.Office.Contact
   summary: >-
-    <span data-ttu-id="fd5f5-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-p101">Represents a contact stored on the server. Read mode only.</span></span>
+    <span data-ttu-id="69a09-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="69a09-p101">Represents a contact stored on the server. Read mode only.</span></span>
 
 
-    <span data-ttu-id="fd5f5-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:outlook.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:outlook.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
+    <span data-ttu-id="69a09-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:outlook.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="69a09-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:outlook.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
 
 
-    <span data-ttu-id="fd5f5-104">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fd5f5-104">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="69a09-104">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="69a09-104">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="fd5f5-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="fd5f5-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="fd5f5-106">受限</span><span class="sxs-lookup"><span data-stu-id="fd5f5-106">Restricted</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="69a09-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="69a09-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="69a09-106">受限</span><span class="sxs-lookup"><span data-stu-id="69a09-106">Restricted</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="fd5f5-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="fd5f5-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="fd5f5-108">Read</span><span class="sxs-lookup"><span data-stu-id="fd5f5-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="69a09-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="69a09-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="69a09-108">Read</span><span class="sxs-lookup"><span data-stu-id="69a09-108">Read</span></span></td></tr></table>
   name: Office.Contact
   fullName: outlook.Office.Contact
   langs:
@@ -34,7 +34,7 @@ items:
   - outlook.Office.Contact.phoneNumbers
   - outlook.Office.Contact.urls
 - uid: outlook.Office.Contact.addresses
-  summary: <span data-ttu-id="fd5f5-109">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-109">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="fd5f5-110">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-110">Nullable.</span></span>
+  summary: <span data-ttu-id="69a09-109">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="69a09-109">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="69a09-110">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="69a09-110">Nullable.</span></span>
   name: addresses
   fullName: outlook.Office.Contact.addresses
   langs:
@@ -46,7 +46,7 @@ items:
       type:
       - Array<string>
 - uid: outlook.Office.Contact.businessName
-  summary: <span data-ttu-id="fd5f5-111">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-111">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="fd5f5-112">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-112">Nullable.</span></span>
+  summary: <span data-ttu-id="69a09-111">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="69a09-111">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="69a09-112">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="69a09-112">Nullable.</span></span>
   name: businessName
   fullName: outlook.Office.Contact.businessName
   langs:
@@ -58,7 +58,7 @@ items:
       type:
       - string
 - uid: outlook.Office.Contact.emailAddresses
-  summary: <span data-ttu-id="fd5f5-113">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-113">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="fd5f5-114">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="fd5f5-114">Nullable,</span></span>
+  summary: <span data-ttu-id="69a09-113">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="69a09-113">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="69a09-114">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="69a09-114">Nullable,</span></span>
   name: emailAddresses
   fullName: outlook.Office.Contact.emailAddresses
   langs:
@@ -70,7 +70,7 @@ items:
       type:
       - Array<string>
 - uid: outlook.Office.Contact.personName
-  summary: <span data-ttu-id="fd5f5-115">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-115">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="fd5f5-116">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-116">Nullable.</span></span>
+  summary: <span data-ttu-id="69a09-115">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="69a09-115">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="69a09-116">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="69a09-116">Nullable.</span></span>
   name: personName
   fullName: outlook.Office.Contact.personName
   langs:
@@ -82,7 +82,7 @@ items:
       type:
       - string
 - uid: outlook.Office.Contact.phoneNumbers
-  summary: <span data-ttu-id="fd5f5-117">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-117">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="fd5f5-118">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-118">Nullable.</span></span>
+  summary: <span data-ttu-id="69a09-117">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="69a09-117">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="69a09-118">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="69a09-118">Nullable.</span></span>
   name: phoneNumbers
   fullName: outlook.Office.Contact.phoneNumbers
   langs:
@@ -94,7 +94,7 @@ items:
       type:
       - Array<PhoneNumber>
 - uid: outlook.Office.Contact.urls
-  summary: <span data-ttu-id="fd5f5-119">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-119">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="fd5f5-120">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="fd5f5-120">Nullable.</span></span>
+  summary: <span data-ttu-id="69a09-119">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="69a09-119">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="69a09-120">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="69a09-120">Nullable.</span></span>
   name: urls
   fullName: outlook.Office.Contact.urls
   langs:
