--- a/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.itemtype.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.itemtype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: a19ed41f39e51895c1aba77da06c6af1f35c39f4
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042298"
 items:
 - uid: Outlook_1_1.Office.MailboxEnums.ItemType
   summary: >-
-    <span data-ttu-id="acf36-101">指定项的类型。</span><span class="sxs-lookup"><span data-stu-id="acf36-101">Specifies an item's type.</span></span>
+    <span data-ttu-id="1f74a-101">指定项的类型。</span><span class="sxs-lookup"><span data-stu-id="1f74a-101">Specifies an item's type.</span></span>
 
 
-    <span data-ttu-id="acf36-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="acf36-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="acf36-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="acf36-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="acf36-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="acf36-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="1f74a-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f74a-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="1f74a-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="1f74a-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="1f74a-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="1f74a-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.ItemType
   fullName: Outlook_1_1.Office.MailboxEnums.ItemType
   langs:
@@ -23,7 +23,7 @@ items:
   - Outlook_1_1.Office.MailboxEnums.ItemType.Appointment
   - Outlook_1_1.Office.MailboxEnums.ItemType.Message
 - uid: Outlook_1_1.Office.MailboxEnums.ItemType.Appointment
-  summary: <span data-ttu-id="acf36-105">约会项目。</span><span class="sxs-lookup"><span data-stu-id="acf36-105">An appointment item.</span></span>
+  summary: <span data-ttu-id="1f74a-105">约会项目。</span><span class="sxs-lookup"><span data-stu-id="1f74a-105">An appointment item.</span></span>
   name: Appointment
   fullName: Outlook_1_1.Office.MailboxEnums.ItemType.Appointment
   langs:
@@ -31,7 +31,7 @@ items:
   type: field
   numericValue: "\"appointment\""
 - uid: Outlook_1_1.Office.MailboxEnums.ItemType.Message
-  summary: <span data-ttu-id="acf36-106">电子邮件、会议请求、会议响应或会议取消。</span><span class="sxs-lookup"><span data-stu-id="acf36-106">An email, meeting request, meeting response, or meeting cancellation.</span></span>
+  summary: <span data-ttu-id="1f74a-106">电子邮件、会议请求、会议响应或会议取消。</span><span class="sxs-lookup"><span data-stu-id="1f74a-106">An email, meeting request, meeting response, or meeting cancellation.</span></span>
   name: Message
   fullName: Outlook_1_1.Office.MailboxEnums.ItemType.Message
   langs:
