--- a/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.recipienttype.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.mailboxenums.recipienttype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 20b8b81f55d83a0e4229fc2d234e460292cee3d6
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042297"
 items:
 - uid: Outlook_1_1.Office.MailboxEnums.RecipientType
   summary: >-
-    <span data-ttu-id="75565-101">指定约会收件人的类型。</span><span class="sxs-lookup"><span data-stu-id="75565-101">Specifies the type of recipient for an appointment.</span></span>
+    <span data-ttu-id="8546b-101">指定约会收件人的类型。</span><span class="sxs-lookup"><span data-stu-id="8546b-101">Specifies the type of recipient for an appointment.</span></span>
 
 
-    <span data-ttu-id="75565-102">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="75565-102">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="75565-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="75565-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="75565-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="75565-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="8546b-102">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8546b-102">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="8546b-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="8546b-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="8546b-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="8546b-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.RecipientType
   fullName: Outlook_1_1.Office.MailboxEnums.RecipientType
   langs:
@@ -25,7 +25,7 @@ items:
   - Outlook_1_1.Office.MailboxEnums.RecipientType.Other
   - Outlook_1_1.Office.MailboxEnums.RecipientType.User
 - uid: Outlook_1_1.Office.MailboxEnums.RecipientType.DistributionList
-  summary: <span data-ttu-id="75565-105">指定收件人是包含电子邮件地址列表的通讯组列表。</span><span class="sxs-lookup"><span data-stu-id="75565-105">Specifies that the recipient is a distribution list containing a list of email addresses.</span></span>
+  summary: <span data-ttu-id="8546b-105">指定收件人是包含电子邮件地址列表的通讯组列表。</span><span class="sxs-lookup"><span data-stu-id="8546b-105">Specifies that the recipient is a distribution list containing a list of email addresses.</span></span>
   name: DistributionList
   fullName: Outlook_1_1.Office.MailboxEnums.RecipientType.DistributionList
   langs:
@@ -33,7 +33,7 @@ items:
   type: field
   numericValue: "\"distributionList\""
 - uid: Outlook_1_1.Office.MailboxEnums.RecipientType.ExternalUser
-  summary: <span data-ttu-id="75565-106">指定收件人不是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="75565-106">Specifies that the recipient is an SMTP email address that is not on the Exchange server.</span></span>
+  summary: <span data-ttu-id="8546b-106">指定收件人不是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="8546b-106">Specifies that the recipient is an SMTP email address that is not on the Exchange server.</span></span>
   name: ExternalUser
   fullName: Outlook_1_1.Office.MailboxEnums.RecipientType.ExternalUser
   langs:
@@ -41,7 +41,7 @@ items:
   type: field
   numericValue: "\"externalUser\""
 - uid: Outlook_1_1.Office.MailboxEnums.RecipientType.Other
-  summary: <span data-ttu-id="75565-107">指定收件人不是其他收件人类型之一。</span><span class="sxs-lookup"><span data-stu-id="75565-107">Specifies that the recipient is not one of the other recipient types.</span></span>
+  summary: <span data-ttu-id="8546b-107">指定收件人不是其他收件人类型之一。</span><span class="sxs-lookup"><span data-stu-id="8546b-107">Specifies that the recipient is not one of the other recipient types.</span></span>
   name: Other
   fullName: Outlook_1_1.Office.MailboxEnums.RecipientType.Other
   langs:
@@ -49,7 +49,7 @@ items:
   type: field
   numericValue: "\"other\""
 - uid: Outlook_1_1.Office.MailboxEnums.RecipientType.User
-  summary: <span data-ttu-id="75565-108">指定收件人是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="75565-108">Specifies that the recipient is an SMTP email address that is on the Exchange server.</span></span>
+  summary: <span data-ttu-id="8546b-108">指定收件人是位于 Exchange 服务器上的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="8546b-108">Specifies that the recipient is an SMTP email address that is on the Exchange server.</span></span>
   name: User
   fullName: Outlook_1_1.Office.MailboxEnums.RecipientType.User
   langs:
