--- a/docs/docs-ref-autogen/outlook_1_3/office.diagnostics.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.diagnostics.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 7d19f5f342ac3334b0f11fabc05d8768bfab4f18
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042301"
 items:
 - uid: Outlook_1_3.Office.Diagnostics
   summary: >-
-    <span data-ttu-id="3e406-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="3e406-101">Provides diagnostic information to an Outlook add-in.</span></span>
+    <span data-ttu-id="1a77d-101">将诊断信息提供给 Outlook 外接程序。</span><span class="sxs-lookup"><span data-stu-id="1a77d-101">Provides diagnostic information to an Outlook add-in.</span></span>
 
 
-    <span data-ttu-id="3e406-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e406-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a77d-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a77d-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="3e406-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="3e406-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="3e406-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="3e406-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="1a77d-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1a77d-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1a77d-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1a77d-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="3e406-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="3e406-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="3e406-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3e406-106">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="1a77d-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1a77d-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1a77d-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="1a77d-106">Compose or read</span></span></td></tr></table>
   name: Office.Diagnostics
   fullName: Outlook_1_3.Office.Diagnostics
   langs:
@@ -29,18 +29,18 @@ items:
   - Outlook_1_3.Office.Diagnostics.OWAView
 - uid: Outlook_1_3.Office.Diagnostics.hostName
   summary: >-
-    <span data-ttu-id="3e406-107">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="3e406-107">Gets a string that represents the name of the host application.</span></span>
+    <span data-ttu-id="1a77d-107">获取表示主机应用程序的名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="1a77d-107">Gets a string that represents the name of the host application.</span></span>
 
 
-    <span data-ttu-id="3e406-108">一个 string 类型的值可以是下列值之一： Outlook、 Mac Outlook、 OutlookIOS，或 OutlookWebApp。</span><span class="sxs-lookup"><span data-stu-id="3e406-108">A string that can be one of the following values: Outlook, Mac Outlook, OutlookIOS, or OutlookWebApp.</span></span>
+    <span data-ttu-id="1a77d-108">一个 string 类型的值可以是下列值之一： Outlook、 Mac Outlook、 OutlookIOS，或 OutlookWebApp。</span><span class="sxs-lookup"><span data-stu-id="1a77d-108">A string that can be one of the following values: Outlook, Mac Outlook, OutlookIOS, or OutlookWebApp.</span></span>
 
 
-    <span data-ttu-id="3e406-109">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e406-109">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a77d-109">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a77d-109">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="3e406-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="3e406-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="3e406-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="3e406-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="1a77d-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1a77d-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1a77d-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1a77d-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="3e406-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="3e406-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="3e406-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3e406-113">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="1a77d-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1a77d-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1a77d-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="1a77d-113">Compose or read</span></span></td></tr></table>
   name: hostName
   fullName: Outlook_1_3.Office.Diagnostics.hostName
   langs:
@@ -53,18 +53,18 @@ items:
       - string
 - uid: Outlook_1_3.Office.Diagnostics.hostVersion
   summary: >-
-    <span data-ttu-id="3e406-114">获取表示主机应用程序或 Exchange Server 的版本的字符串。</span><span class="sxs-lookup"><span data-stu-id="3e406-114">Gets a string that represents the version of either the host application or the Exchange Server.</span></span>
+    <span data-ttu-id="1a77d-114">获取表示主机应用程序或 Exchange Server 的版本的字符串。</span><span class="sxs-lookup"><span data-stu-id="1a77d-114">Gets a string that represents the version of either the host application or the Exchange Server.</span></span>
 
 
-    <span data-ttu-id="3e406-115">如果 Outlook 桌面客户端或适用于 iOS 的 Outlook 邮件外接程序正在运行，hostVersion 属性将返回主机应用程序，Outlook 的版本。</span><span class="sxs-lookup"><span data-stu-id="3e406-115">If the mail add-in is running on the Outlook desktop client or Outlook for iOS, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="3e406-116">在 Outlook Web App 中，该属性返回的 Exchange Server 的版本。</span><span class="sxs-lookup"><span data-stu-id="3e406-116">In Outlook Web App, the property returns the version of the Exchange Server.</span></span> <span data-ttu-id="3e406-117">例如，15.0.468.0 的字符串。</span><span class="sxs-lookup"><span data-stu-id="3e406-117">An example is the string 15.0.468.0.</span></span>
+    <span data-ttu-id="1a77d-115">如果 Outlook 桌面客户端或适用于 iOS 的 Outlook 邮件外接程序正在运行，hostVersion 属性将返回主机应用程序，Outlook 的版本。</span><span class="sxs-lookup"><span data-stu-id="1a77d-115">If the mail add-in is running on the Outlook desktop client or Outlook for iOS, the hostVersion property returns the version of the host application, Outlook.</span></span> <span data-ttu-id="1a77d-116">在 Outlook Web App 中，该属性返回的 Exchange Server 的版本。</span><span class="sxs-lookup"><span data-stu-id="1a77d-116">In Outlook Web App, the property returns the version of the Exchange Server.</span></span> <span data-ttu-id="1a77d-117">例如，15.0.468.0 的字符串。</span><span class="sxs-lookup"><span data-stu-id="1a77d-117">An example is the string 15.0.468.0.</span></span>
 
 
-    <span data-ttu-id="3e406-118">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e406-118">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a77d-118">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a77d-118">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="3e406-119">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="3e406-119">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="3e406-120">ReadItem</span><span class="sxs-lookup"><span data-stu-id="3e406-120">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="1a77d-119">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1a77d-119">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1a77d-120">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1a77d-120">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="3e406-121">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="3e406-121">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="3e406-122">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3e406-122">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="1a77d-121">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1a77d-121">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1a77d-122">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="1a77d-122">Compose or read</span></span></td></tr></table>
   name: hostVersion
   fullName: Outlook_1_3.Office.Diagnostics.hostVersion
   langs:
@@ -77,33 +77,33 @@ items:
       - string
 - uid: Outlook_1_3.Office.Diagnostics.OWAView
   summary: >-
-    <span data-ttu-id="3e406-123">获取表示 Outlook Web App 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="3e406-123">Gets a string that represents the current view of Outlook Web App.</span></span>
+    <span data-ttu-id="1a77d-123">获取表示 Outlook Web App 的当前视图的字符串。</span><span class="sxs-lookup"><span data-stu-id="1a77d-123">Gets a string that represents the current view of Outlook Web App.</span></span>
 
 
-    <span data-ttu-id="3e406-124">返回的字符串可以是下列值之一：OneColumn、TwoColumns 或 ThreeColumns。</span><span class="sxs-lookup"><span data-stu-id="3e406-124">The returned string can be one of the following values: OneColumn, TwoColumns, or ThreeColumns.</span></span>
+    <span data-ttu-id="1a77d-124">返回的字符串可以是下列值之一：OneColumn、TwoColumns 或 ThreeColumns。</span><span class="sxs-lookup"><span data-stu-id="1a77d-124">The returned string can be one of the following values: OneColumn, TwoColumns, or ThreeColumns.</span></span>
 
 
-    <span data-ttu-id="3e406-125">如果主机应用程序不是 Outlook Web App，则访问此属性将导致返回 undefined。</span><span class="sxs-lookup"><span data-stu-id="3e406-125">If the host application is not Outlook Web App, then accessing this property results in undefined.</span></span>
+    <span data-ttu-id="1a77d-125">如果主机应用程序不是 Outlook Web App，则访问此属性将导致返回 undefined。</span><span class="sxs-lookup"><span data-stu-id="1a77d-125">If the host application is not Outlook Web App, then accessing this property results in undefined.</span></span>
 
 
-    <span data-ttu-id="3e406-126">Outlook Web App 具有三种视图，这些视图分别与屏幕和窗口的宽度以及可以显示的列数相对应：</span><span class="sxs-lookup"><span data-stu-id="3e406-126">Outlook Web App has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
+    <span data-ttu-id="1a77d-126">Outlook Web App 具有三种视图，这些视图分别与屏幕和窗口的宽度以及可以显示的列数相对应：</span><span class="sxs-lookup"><span data-stu-id="1a77d-126">Outlook Web App has three views that correspond to the width of the screen and the window, and the number of columns that can be displayed:</span></span>
 
 
-    - <span data-ttu-id="3e406-p102">OneColumn 在屏幕较窄时显示。Outlook Web App 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="3e406-p102">OneColumn, which is displayed when the screen is narrow. Outlook Web App uses this single-column layout on the entire screen of a smartphone.</span></span>
+    - <span data-ttu-id="1a77d-p102">OneColumn 在屏幕较窄时显示。Outlook Web App 在智能手机的整个屏幕上使用此单列布局。</span><span class="sxs-lookup"><span data-stu-id="1a77d-p102">OneColumn, which is displayed when the screen is narrow. Outlook Web App uses this single-column layout on the entire screen of a smartphone.</span></span>
 
 
-    - <span data-ttu-id="3e406-p103">TwoColumns 在屏幕较宽时显示。Outlook Web App 在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="3e406-p103">TwoColumns, which is displayed when the screen is wider. Outlook Web App uses this view on most tablets.</span></span>
+    - <span data-ttu-id="1a77d-p103">TwoColumns 在屏幕较宽时显示。Outlook Web App 在大多数平板电脑上使用此视图。</span><span class="sxs-lookup"><span data-stu-id="1a77d-p103">TwoColumns, which is displayed when the screen is wider. Outlook Web App uses this view on most tablets.</span></span>
 
 
-    - <span data-ttu-id="3e406-p104">ThreeColumns 在屏幕为宽屏时显示。例如，Outlook Web App 在台式机的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="3e406-p104">ThreeColumns, which is displayed when the screen is wide. For example, Outlook Web App uses this view in a full screen window on a desktop computer.</span></span>
+    - <span data-ttu-id="1a77d-p104">ThreeColumns 在屏幕为宽屏时显示。例如，Outlook Web App 在台式机的全屏窗口中使用此视图。</span><span class="sxs-lookup"><span data-stu-id="1a77d-p104">ThreeColumns, which is displayed when the screen is wide. For example, Outlook Web App uses this view in a full screen window on a desktop computer.</span></span>
 
 
-    <span data-ttu-id="3e406-133">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e406-133">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="1a77d-133">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a77d-133">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="3e406-134">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="3e406-134">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="3e406-135">ReadItem</span><span class="sxs-lookup"><span data-stu-id="3e406-135">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="1a77d-134">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1a77d-134">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1a77d-135">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1a77d-135">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="3e406-136">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="3e406-136">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="3e406-137">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3e406-137">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="1a77d-136">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1a77d-136">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1a77d-137">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="1a77d-137">Compose or read</span></span></td></tr></table>
   name: OWAView
   fullName: Outlook_1_3.Office.Diagnostics.OWAView
   langs:
