--- a/docs/docs-ref-autogen/outlook_1_3/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.emailuser.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: 5cc89bc4b43fd417dc2fcf98ab5cc1319fe40e1b
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042368"
 items:
 - uid: Outlook_1_3.Office.EmailUser
   summary: >-
-    <span data-ttu-id="0e3b5-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="0e3b5-101">Represents an email account on an Exchange Server.</span></span>
+    <span data-ttu-id="a56e5-101">表示 Exchange Server 上的电子邮件帐户。</span><span class="sxs-lookup"><span data-stu-id="a56e5-101">Represents an email account on an Exchange Server.</span></span>
 
 
-    <span data-ttu-id="0e3b5-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0e3b5-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a56e5-102">\[[API 集： 邮箱 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a56e5-102">\[ [API set: Mailbox 1.0](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="0e3b5-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="0e3b5-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="0e3b5-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="0e3b5-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="a56e5-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="a56e5-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="a56e5-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="a56e5-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="0e3b5-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="0e3b5-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="0e3b5-106">Read</span><span class="sxs-lookup"><span data-stu-id="0e3b5-106">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="a56e5-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="a56e5-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="a56e5-106">Read</span><span class="sxs-lookup"><span data-stu-id="a56e5-106">Read</span></span></td></tr></table>
   name: Office.EmailUser
   fullName: Outlook_1_3.Office.EmailUser
   langs:
@@ -27,7 +27,7 @@ items:
   - Outlook_1_3.Office.EmailUser.displayName
   - Outlook_1_3.Office.EmailUser.emailAddress
 - uid: Outlook_1_3.Office.EmailUser.displayName
-  summary: <span data-ttu-id="0e3b5-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="0e3b5-107">Gets the display name associated with an email address.</span></span>
+  summary: <span data-ttu-id="a56e5-107">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="a56e5-107">Gets the display name associated with an email address.</span></span>
   name: displayName
   fullName: Outlook_1_3.Office.EmailUser.displayName
   langs:
@@ -39,7 +39,7 @@ items:
       type:
       - string
 - uid: Outlook_1_3.Office.EmailUser.emailAddress
-  summary: <span data-ttu-id="0e3b5-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="0e3b5-108">Gets the SMTP email address.</span></span>
+  summary: <span data-ttu-id="a56e5-108">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="a56e5-108">Gets the SMTP email address.</span></span>
   name: emailAddress
   fullName: Outlook_1_3.Office.EmailUser.emailAddress
   langs:
