--- a/docs/docs-ref-autogen/outlook_1_3/office.mailboxenums.restversion.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.mailboxenums.restversion.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: fd76d210fe0a8ca464ed5fcb40bc20116565ead5
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042300"
 items:
 - uid: Outlook_1_3.Office.MailboxEnums.RestVersion
   summary: >-
-    <span data-ttu-id="28aea-101">指定对应于 REST 格式的项目 ID 的 REST API 的版本。</span><span class="sxs-lookup"><span data-stu-id="28aea-101">Specifies the version of the REST API that corresponds to a REST-formatted item ID.</span></span>
+    <span data-ttu-id="79d36-101">指定对应于 REST 格式的项目 ID 的 REST API 的版本。</span><span class="sxs-lookup"><span data-stu-id="79d36-101">Specifies the version of the REST API that corresponds to a REST-formatted item ID.</span></span>
 
 
-    <span data-ttu-id="28aea-102">\[[API 集： 邮箱 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="28aea-102">\[ [API set: Mailbox 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="28aea-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="28aea-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="28aea-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="28aea-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="79d36-102">\[[API 集： 邮箱 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79d36-102">\[ [API set: Mailbox 1.3](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="79d36-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="79d36-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="79d36-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="79d36-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.RestVersion
   fullName: Outlook_1_3.Office.MailboxEnums.RestVersion
   langs:
@@ -24,7 +24,7 @@ items:
   - Outlook_1_3.Office.MailboxEnums.RestVersion.v1_0
   - Outlook_1_3.Office.MailboxEnums.RestVersion.v2_0
 - uid: Outlook_1_3.Office.MailboxEnums.RestVersion.Beta
-  summary: <span data-ttu-id="28aea-105">Beta.</span><span class="sxs-lookup"><span data-stu-id="28aea-105">Beta.</span></span>
+  summary: <span data-ttu-id="79d36-105">Beta.</span><span class="sxs-lookup"><span data-stu-id="79d36-105">Beta.</span></span>
   name: Beta
   fullName: Outlook_1_3.Office.MailboxEnums.RestVersion.Beta
   langs:
@@ -32,7 +32,7 @@ items:
   type: field
   numericValue: "\"beta\""
 - uid: Outlook_1_3.Office.MailboxEnums.RestVersion.v1_0
-  summary: <span data-ttu-id="28aea-106">版本 1.0</span><span class="sxs-lookup"><span data-stu-id="28aea-106">Version 1.0.</span></span>
+  summary: <span data-ttu-id="79d36-106">版本 1.0</span><span class="sxs-lookup"><span data-stu-id="79d36-106">Version 1.0.</span></span>
   name: v1_0
   fullName: Outlook_1_3.Office.MailboxEnums.RestVersion.v1_0
   langs:
@@ -40,7 +40,7 @@ items:
   type: field
   numericValue: "\"v1.0\""
 - uid: Outlook_1_3.Office.MailboxEnums.RestVersion.v2_0
-  summary: <span data-ttu-id="28aea-107">版本 2.0</span><span class="sxs-lookup"><span data-stu-id="28aea-107">Version 2.0.</span></span>
+  summary: <span data-ttu-id="79d36-107">版本 2.0</span><span class="sxs-lookup"><span data-stu-id="79d36-107">Version 2.0.</span></span>
   name: v2_0
   fullName: Outlook_1_3.Office.MailboxEnums.RestVersion.v2_0
   langs:
