--- a/docs/docs-ref-autogen/outlook_1_3/office.subject.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.subject.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
 ms.openlocfilehash: c244d07284654025d2be38a8c334a5278e541cfd
-ms.sourcegitcommit: beffe9455dace422e85b92f0105c54ff7b594cbf
+ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/20/2018
+ms.lasthandoff: 09/28/2018
 ms.locfileid: "24042299"
 items:
 - uid: Outlook_1_3.Office.Subject
   summary: >-
-    <span data-ttu-id="803ce-101">提供用于获取和设置 Outlook 外接程序中的约会或邮件的主题的方法。</span><span class="sxs-lookup"><span data-stu-id="803ce-101">Provides methods to get and set the subject of an appointment or message in an Outlook add-in.</span></span>
+    <span data-ttu-id="35d78-101">提供用于获取和设置 Outlook 外接程序中的约会或邮件的主题的方法。</span><span class="sxs-lookup"><span data-stu-id="35d78-101">Provides methods to get and set the subject of an appointment or message in an Outlook add-in.</span></span>
 
 
-    <span data-ttu-id="803ce-102">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="803ce-102">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="35d78-102">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35d78-102">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="803ce-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="803ce-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="803ce-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="803ce-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="35d78-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="35d78-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="35d78-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="35d78-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="803ce-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="803ce-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="803ce-106">撰写</span><span class="sxs-lookup"><span data-stu-id="803ce-106">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="35d78-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="35d78-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="35d78-106">撰写</span><span class="sxs-lookup"><span data-stu-id="35d78-106">Compose</span></span></td></tr></table>
   name: Office.Subject
   fullName: Outlook_1_3.Office.Subject
   langs:
@@ -28,21 +28,21 @@ items:
   - Outlook_1_3.Office.Subject.setAsync
 - uid: Outlook_1_3.Office.Subject.getAsync
   summary: >-
-    <span data-ttu-id="803ce-107">获取约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="803ce-107">Gets the subject of an appointment or message.</span></span>
+    <span data-ttu-id="35d78-107">获取约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="35d78-107">Gets the subject of an appointment or message.</span></span>
 
 
-    <span data-ttu-id="803ce-108">getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="803ce-108">The getAsync method starts an asynchronous call to the Exchange server to get the subject of an appointment or message.</span></span>
+    <span data-ttu-id="35d78-108">getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="35d78-108">The getAsync method starts an asynchronous call to the Exchange server to get the subject of an appointment or message.</span></span>
 
 
-    <span data-ttu-id="803ce-109">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="803ce-109">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="35d78-109">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35d78-109">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="803ce-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="803ce-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="803ce-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="803ce-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="35d78-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="35d78-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="35d78-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="35d78-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="803ce-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="803ce-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="803ce-113">撰写</span><span class="sxs-lookup"><span data-stu-id="803ce-113">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="35d78-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="35d78-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="35d78-113">撰写</span><span class="sxs-lookup"><span data-stu-id="35d78-113">Compose</span></span></td></tr></table>
 
 
-    <span data-ttu-id="803ce-114">除了主签名，此方法还具有此签名：</span><span class="sxs-lookup"><span data-stu-id="803ce-114">In addition to the main signature, this method also has this signature:</span></span>
+    <span data-ttu-id="35d78-114">除了主签名，此方法还具有此签名：</span><span class="sxs-lookup"><span data-stu-id="35d78-114">In addition to the main signature, this method also has this signature:</span></span>
 
 
     `getAsync(callback: (result: AsyncResult) => void): void;`
@@ -59,33 +59,33 @@ items:
       description: ''
     parameters:
     - id: options
-      description: '<span data-ttu-id="803ce-115">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="803ce-115">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="803ce-116">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="803ce-116">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="35d78-115">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="35d78-115">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="35d78-116">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="35d78-116">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="803ce-117">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="803ce-117">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span>
+      description: <span data-ttu-id="35d78-117">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="35d78-117">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span>
       type:
       - '(result: AsyncResult) => void'
 - uid: Outlook_1_3.Office.Subject.setAsync
   summary: >-
-    <span data-ttu-id="803ce-118">设置约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="803ce-118">Sets the subject of an appointment or message.</span></span>
+    <span data-ttu-id="35d78-118">设置约会或邮件的主题。</span><span class="sxs-lookup"><span data-stu-id="35d78-118">Sets the subject of an appointment or message.</span></span>
 
 
-    <span data-ttu-id="803ce-p102">setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会或邮件的主题。设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。</span><span class="sxs-lookup"><span data-stu-id="803ce-p102">The setAsync method starts an asynchronous call to the Exchange server to set the subject of an appointment or message. Setting the subject overwrites the current subject, but leaves any prefixes, such as "Fwd:" or "Re:" in place.</span></span>
+    <span data-ttu-id="35d78-p102">setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会或邮件的主题。设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。</span><span class="sxs-lookup"><span data-stu-id="35d78-p102">The setAsync method starts an asynchronous call to the Exchange server to set the subject of an appointment or message. Setting the subject overwrites the current subject, but leaves any prefixes, such as "Fwd:" or "Re:" in place.</span></span>
 
 
-    <span data-ttu-id="803ce-121">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="803ce-121">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="35d78-121">\[[API 集： 邮箱 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35d78-121">\[ [API set: Mailbox 1.1](/javascript/office/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="803ce-122">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="803ce-122">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="803ce-123">ReadItem</span><span class="sxs-lookup"><span data-stu-id="803ce-123">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="35d78-122">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="35d78-122">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="35d78-123">ReadItem</span><span class="sxs-lookup"><span data-stu-id="35d78-123">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="803ce-124">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="803ce-124">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="803ce-125">撰写</span><span class="sxs-lookup"><span data-stu-id="803ce-125">Compose</span></span></td></tr>
+    <tr><td>[<span data-ttu-id="35d78-124">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="35d78-124">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="35d78-125">撰写</span><span class="sxs-lookup"><span data-stu-id="35d78-125">Compose</span></span></td></tr>
 
 
-    <tr><td><span data-ttu-id="803ce-126">错误</span><span class="sxs-lookup"><span data-stu-id="803ce-126">Errors</span></span></td><td><span data-ttu-id="803ce-127">DataExceedsMaximumSize-subject 参数的长度超过 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="803ce-127">DataExceedsMaximumSize - The subject parameter is longer than 255 characters.</span></span></td></tr></table>
+    <tr><td><span data-ttu-id="35d78-126">错误</span><span class="sxs-lookup"><span data-stu-id="35d78-126">Errors</span></span></td><td><span data-ttu-id="35d78-127">DataExceedsMaximumSize-subject 参数的长度超过 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="35d78-127">DataExceedsMaximumSize - The subject parameter is longer than 255 characters.</span></span></td></tr></table>
 
 
-    <span data-ttu-id="803ce-128">除了主签名，此方法还具有这些签名：</span><span class="sxs-lookup"><span data-stu-id="803ce-128">In addition to the main signature, this method also has these signatures:</span></span>
+    <span data-ttu-id="35d78-128">除了主签名，此方法还具有这些签名：</span><span class="sxs-lookup"><span data-stu-id="35d78-128">In addition to the main signature, this method also has these signatures:</span></span>
 
 
     `setAsync(subject: string): void;`
@@ -108,14 +108,14 @@ items:
       description: ''
     parameters:
     - id: subject
-      description: <span data-ttu-id="803ce-p103">约会或邮件的主题。字符串长度限制为 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="803ce-p103">The subject of the appointment or message. The string is limited to 255 characters.</span></span>
+      description: <span data-ttu-id="35d78-p103">约会或邮件的主题。字符串长度限制为 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="35d78-p103">The subject of the appointment or message. The string is limited to 255 characters.</span></span>
       type:
       - string
     - id: options
-      description: '<span data-ttu-id="803ce-131">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="803ce-131">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="803ce-132">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="803ce-132">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="35d78-131">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="35d78-131">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="35d78-132">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="35d78-132">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="803ce-133">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="803ce-133">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span> <span data-ttu-id="803ce-134">如果设置主题失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="803ce-134">If setting the subject fails, the asyncResult.error property will contain an error code.</span></span>
+      description: <span data-ttu-id="35d78-133">方法完成后，使用单个的类型为 AsyncResult 参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="35d78-133">When the method completes, the function passed in the callback parameter is called with a single parameter of type AsyncResult.</span></span> <span data-ttu-id="35d78-134">如果设置主题失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="35d78-134">If setting the subject fails, the asyncResult.error property will contain an error code.</span></span>
       type:
       - '(result: AsyncResult) => void'
